--- a/src/app/layout/topnav/topnav.component.html
+++ b/src/app/layout/topnav/topnav.component.html
@@ -25,7 +25,7 @@
           </style>
 
 
-        <div class="avatar avatar-lg position-relative">
+        <div class="avatar avatar-lg position-relative" routerLink="/profile">
           <img [src]="userDetails?.userimg || defaultimage" alt="profile_image" class="w-75 border-radius-xl shadow-sm">
         </div>
 
