--- a/src/app/billing/billing.component.html
+++ b/src/app/billing/billing.component.html
@@ -70,8 +70,10 @@
                 <h6 class="mb-0">Payment Method</h6>
               </div>
               <div class="col-6 text-end">
-                <a class="btn bg-gradient-dark mb-0" href="javascript:;"><i class="material-icons text-sm">add</i>&nbsp;&nbsp;Add New Card</a>
+                <a class="btn bg-gradient-dark mb-0" href="javascript:;" (click)="Payumoney()"><i class="material-icons text-sm">add</i>&nbsp;&nbsp;Pay Now</a>
+
               </div>
+              <!-- <button type="button" (click)="SubmitBillingDetail()">PAY NOW</button> -->
             </div>
           </div>
           <div class="card-body p-3">
@@ -173,19 +175,21 @@
       </div>
       <div class="card-body pt-4 p-3">
         <ul class="list-group">
-          <li class="list-group-item border-0 d-flex p-4 mb-2 bg-gray-100 border-radius-lg">
+          <li class="list-group-item border-0 d-flex p-4 mb-2 bg-gray-100 border-radius-lg" *ngFor="let bill of bills">
             <div class="d-flex flex-column">
-              <h6 class="mb-3 text-sm">Oliver Liam</h6>
-              <span class="mb-2 text-xs">Company Name: <span class="text-dark font-weight-bold ms-sm-2">Viking Burrito</span></span>
-              <span class="mb-2 text-xs">Email Address: <span class="text-dark ms-sm-2 font-weight-bold">oliver@burrito.com</span></span>
-              <span class="text-xs">VAT Number: <span class="text-dark ms-sm-2 font-weight-bold">FRB1235476</span></span>
+              <h6 class="mb-3 text-sm">{{bill?.durationdays}} Days | {{bill?.service}} service</h6>
+              <span class="mb-2 text-xs">Service: <span class="text-dark font-weight-bold ms-sm-2">{{bill?.service}}</span></span>
+              <span class="mb-2 text-xs">Email Address: <span class="text-dark ms-sm-2 font-weight-bold">{{bill?.billingfor.email}}</span></span>
+              <span class="mb-2 text-xs">Status: <span class="text-dark ms-sm-2 font-weight-bold">{{bill?.status}}</span></span>
+              <span class="text-xs">Date: <span class="text-dark ms-sm-2 font-weight-bold">{{bill?.createdAt | date:'short'}}</span></span>
             </div>
             <div class="ms-auto text-end">
+              <a class="btn btn-link text-gradient px-3 mb-0" [ngClass]="bill?.status == 'pending'?'text-danger':'text-success'" href="javascript:;">{{bill?.status}}</a>
               <a class="btn btn-link text-danger text-gradient px-3 mb-0" href="javascript:;"><i class="material-icons text-sm me-2">delete</i>Delete</a>
-              <a class="btn btn-link text-dark px-3 mb-0" href="javascript:;"><i class="material-icons text-sm me-2">edit</i>Edit</a>
+              <a class="btn btn-link text-dark px-3 mb-0" href="javascript:;">₹ {{bill?.price | number: '1.2-2'}}</a>
             </div>
           </li>
-          <li class="list-group-item border-0 d-flex p-4 mb-2 mt-3 bg-gray-100 border-radius-lg">
+          <!-- <li class="list-group-item border-0 d-flex p-4 mb-2 mt-3 bg-gray-100 border-radius-lg">
             <div class="d-flex flex-column">
               <h6 class="mb-3 text-sm">Lucas Harper</h6>
               <span class="mb-2 text-xs">Company Name: <span class="text-dark font-weight-bold ms-sm-2">Stone Tech Zone</span></span>
@@ -208,7 +212,7 @@
               <a class="btn btn-link text-danger text-gradient px-3 mb-0" href="javascript:;"><i class="material-icons text-sm me-2">delete</i>Delete</a>
               <a class="btn btn-link text-dark px-3 mb-0" href="javascript:;"><i class="material-icons text-sm me-2">edit</i>Edit</a>
             </div>
-          </li>
+          </li> -->
         </ul>
       </div>
     </div>
