--- a/src/app/billing/billing.component.html
+++ b/src/app/billing/billing.component.html
@@ -4,11 +4,13 @@
       <div class="col-xl-6 mb-xl-0 mb-4">
         <div class="card bg-transparent shadow-xl">
           <div class="overflow-hidden position-relative border-radius-xl">
-            <img src="../../assets/img/illustrations/pattern-tree.svg" class="position-absolute opacity-2 start-0 top-0 w-100 z-index-1 h-100" alt="pattern-tree">
+            <img src="../../assets/img/illustrations/pattern-tree.svg"
+              class="position-absolute opacity-2 start-0 top-0 w-100 z-index-1 h-100" alt="pattern-tree">
             <span class="mask bg-gradient-dark opacity-10"></span>
             <div class="card-body position-relative z-index-1 p-3">
               <i class="material-icons text-white p-2">wifi</i>
-              <h5 class="text-white mt-4 mb-5 pb-2">4562&nbsp;&nbsp;&nbsp;1122&nbsp;&nbsp;&nbsp;4594&nbsp;&nbsp;&nbsp;7852</h5>
+              <h5 class="text-white mt-4 mb-5 pb-2">
+                4562&nbsp;&nbsp;&nbsp;1122&nbsp;&nbsp;&nbsp;4594&nbsp;&nbsp;&nbsp;7852</h5>
               <div class="d-flex">
                 <div class="d-flex">
                   <div class="me-4">
@@ -70,8 +72,12 @@
                 <h6 class="mb-0">Payment Method</h6>
               </div>
               <div class="col-6 text-end">
-                <a class="btn bg-gradient-dark mb-0" href="javascript:;"><i class="material-icons text-sm">add</i>&nbsp;&nbsp;Add New Card</a>
+                <a class="btn bg-gradient-dark mb-0" href="javascript:;"><i
+                    class="material-icons text-sm">add</i>&nbsp;&nbsp;Add New Card</a>
               </div>
+
+              <!-- id="pay-btn" -->
+
             </div>
           </div>
           <div class="card-body p-3">
@@ -80,14 +86,16 @@
                 <div class="card card-body border card-plain border-radius-lg d-flex align-items-center flex-row">
                   <img class="w-10 me-3 mb-0" src="../../assets/img/logos/mastercard.png" alt="logo">
                   <h6 class="mb-0">****&nbsp;&nbsp;&nbsp;****&nbsp;&nbsp;&nbsp;****&nbsp;&nbsp;&nbsp;7852</h6>
-                  <i class="material-icons ms-auto text-dark cursor-pointer" data-bs-toggle="tooltip" data-bs-placement="top" title="Edit Card">edit</i>
+                  <i class="material-icons ms-auto text-dark cursor-pointer" data-bs-toggle="tooltip"
+                    data-bs-placement="top" title="Edit Card">edit</i>
                 </div>
               </div>
               <div class="col-md-6">
                 <div class="card card-body border card-plain border-radius-lg d-flex align-items-center flex-row">
                   <img class="w-10 me-3 mb-0" src="../../assets/img/logos/visa.png" alt="logo">
                   <h6 class="mb-0">****&nbsp;&nbsp;&nbsp;****&nbsp;&nbsp;&nbsp;****&nbsp;&nbsp;&nbsp;5248</h6>
-                  <i class="material-icons ms-auto text-dark cursor-pointer" data-bs-toggle="tooltip" data-bs-placement="top" title="Edit Card">edit</i>
+                  <i class="material-icons ms-auto text-dark cursor-pointer" data-bs-toggle="tooltip"
+                    data-bs-placement="top" title="Edit Card">edit</i>
                 </div>
               </div>
             </div>
@@ -117,7 +125,8 @@
             </div>
             <div class="d-flex align-items-center text-sm">
               ₹180
-              <button class="btn btn-link text-dark text-sm mb-0 px-0 ms-4"><i class="material-icons text-lg position-relative me-1">picture_as_pdf</i> PDF</button>
+              <button class="btn btn-link text-dark text-sm mb-0 px-0 ms-4"><i
+                  class="material-icons text-lg position-relative me-1">picture_as_pdf</i> PDF</button>
             </div>
           </li>
           <li class="list-group-item border-0 d-flex justify-content-between ps-0 mb-2 border-radius-lg">
@@ -127,7 +136,8 @@
             </div>
             <div class="d-flex align-items-center text-sm">
               ₹250
-              <button class="btn btn-link text-dark text-sm mb-0 px-0 ms-4"><i class="material-icons text-lg position-relative me-1">picture_as_pdf</i> PDF</button>
+              <button class="btn btn-link text-dark text-sm mb-0 px-0 ms-4"><i
+                  class="material-icons text-lg position-relative me-1">picture_as_pdf</i> PDF</button>
             </div>
           </li>
           <li class="list-group-item border-0 d-flex justify-content-between ps-0 mb-2 border-radius-lg">
@@ -137,7 +147,8 @@
             </div>
             <div class="d-flex align-items-center text-sm">
               ₹560
-              <button class="btn btn-link text-dark text-sm mb-0 px-0 ms-4"><i class="material-icons text-lg position-relative me-1">picture_as_pdf</i> PDF</button>
+              <button class="btn btn-link text-dark text-sm mb-0 px-0 ms-4"><i
+                  class="material-icons text-lg position-relative me-1">picture_as_pdf</i> PDF</button>
             </div>
           </li>
           <li class="list-group-item border-0 d-flex justify-content-between ps-0 mb-2 border-radius-lg">
@@ -147,7 +158,8 @@
             </div>
             <div class="d-flex align-items-center text-sm">
               ₹120
-              <button class="btn btn-link text-dark text-sm mb-0 px-0 ms-4"><i class="material-icons text-lg position-relative me-1">picture_as_pdf</i> PDF</button>
+              <button class="btn btn-link text-dark text-sm mb-0 px-0 ms-4"><i
+                  class="material-icons text-lg position-relative me-1">picture_as_pdf</i> PDF</button>
             </div>
           </li>
           <li class="list-group-item border-0 d-flex justify-content-between ps-0 border-radius-lg">
@@ -157,7 +169,8 @@
             </div>
             <div class="d-flex align-items-center text-sm">
               ₹300
-              <button class="btn btn-link text-dark text-sm mb-0 px-0 ms-4"><i class="material-icons text-lg position-relative me-1">picture_as_pdf</i> PDF</button>
+              <button class="btn btn-link text-dark text-sm mb-0 px-0 ms-4"><i
+                  class="material-icons text-lg position-relative me-1">picture_as_pdf</i> PDF</button>
             </div>
           </li>
         </ul>
@@ -176,37 +189,52 @@
           <li class="list-group-item border-0 d-flex p-4 mb-2 bg-gray-100 border-radius-lg">
             <div class="d-flex flex-column">
               <h6 class="mb-3 text-sm">Oliver Liam</h6>
-              <span class="mb-2 text-xs">Company Name: <span class="text-dark font-weight-bold ms-sm-2">Viking Burrito</span></span>
-              <span class="mb-2 text-xs">Email Address: <span class="text-dark ms-sm-2 font-weight-bold">oliver@burrito.com</span></span>
-              <span class="text-xs">VAT Number: <span class="text-dark ms-sm-2 font-weight-bold">FRB1235476</span></span>
+              <span class="mb-2 text-xs">Company Name: <span class="text-dark font-weight-bold ms-sm-2">Viking
+                  Burrito</span></span>
+              <span class="mb-2 text-xs">Email Address: <span
+                  class="text-dark ms-sm-2 font-weight-bold">oliver@burrito.com</span></span>
+              <span class="text-xs">VAT Number: <span
+                  class="text-dark ms-sm-2 font-weight-bold">FRB1235476</span></span>
             </div>
             <div class="ms-auto text-end">
-              <a class="btn btn-link text-danger text-gradient px-3 mb-0" href="javascript:;"><i class="material-icons text-sm me-2">delete</i>Delete</a>
-              <a class="btn btn-link text-dark px-3 mb-0" href="javascript:;"><i class="material-icons text-sm me-2">edit</i>Edit</a>
+              <a class="btn btn-link text-danger text-gradient px-3 mb-0" href="javascript:;"><i
+                  class="material-icons text-sm me-2">delete</i>Delete</a>
+              <a class="btn btn-link text-dark px-3 mb-0" href="javascript:;"><i
+                  class="material-icons text-sm me-2">edit</i>Edit</a>
             </div>
           </li>
           <li class="list-group-item border-0 d-flex p-4 mb-2 mt-3 bg-gray-100 border-radius-lg">
             <div class="d-flex flex-column">
               <h6 class="mb-3 text-sm">Lucas Harper</h6>
-              <span class="mb-2 text-xs">Company Name: <span class="text-dark font-weight-bold ms-sm-2">Stone Tech Zone</span></span>
-              <span class="mb-2 text-xs">Email Address: <span class="text-dark ms-sm-2 font-weight-bold">lucas@stone-tech.com</span></span>
-              <span class="text-xs">VAT Number: <span class="text-dark ms-sm-2 font-weight-bold">FRB1235476</span></span>
+              <span class="mb-2 text-xs">Company Name: <span class="text-dark font-weight-bold ms-sm-2">Stone Tech
+                  Zone</span></span>
+              <span class="mb-2 text-xs">Email Address: <span
+                  class="text-dark ms-sm-2 font-weight-bold">lucas@stone-tech.com</span></span>
+              <span class="text-xs">VAT Number: <span
+                  class="text-dark ms-sm-2 font-weight-bold">FRB1235476</span></span>
             </div>
             <div class="ms-auto text-end">
-              <a class="btn btn-link text-danger text-gradient px-3 mb-0" href="javascript:;"><i class="material-icons text-sm me-2">delete</i>Delete</a>
-              <a class="btn btn-link text-dark px-3 mb-0" href="javascript:;"><i class="material-icons text-sm me-2">edit</i>Edit</a>
+              <a class="btn btn-link text-danger text-gradient px-3 mb-0" href="javascript:;"><i
+                  class="material-icons text-sm me-2">delete</i>Delete</a>
+              <a class="btn btn-link text-dark px-3 mb-0" href="javascript:;"><i
+                  class="material-icons text-sm me-2">edit</i>Edit</a>
             </div>
           </li>
           <li class="list-group-item border-0 d-flex p-4 mb-2 mt-3 bg-gray-100 border-radius-lg">
             <div class="d-flex flex-column">
               <h6 class="mb-3 text-sm">Ethan James</h6>
-              <span class="mb-2 text-xs">Company Name: <span class="text-dark font-weight-bold ms-sm-2">Fiber Notion</span></span>
-              <span class="mb-2 text-xs">Email Address: <span class="text-dark ms-sm-2 font-weight-bold">ethan@fiber.com</span></span>
-              <span class="text-xs">VAT Number: <span class="text-dark ms-sm-2 font-weight-bold">FRB1235476</span></span>
+              <span class="mb-2 text-xs">Company Name: <span class="text-dark font-weight-bold ms-sm-2">Fiber
+                  Notion</span></span>
+              <span class="mb-2 text-xs">Email Address: <span
+                  class="text-dark ms-sm-2 font-weight-bold">ethan@fiber.com</span></span>
+              <span class="text-xs">VAT Number: <span
+                  class="text-dark ms-sm-2 font-weight-bold">FRB1235476</span></span>
             </div>
             <div class="ms-auto text-end">
-              <a class="btn btn-link text-danger text-gradient px-3 mb-0" href="javascript:;"><i class="material-icons text-sm me-2">delete</i>Delete</a>
-              <a class="btn btn-link text-dark px-3 mb-0" href="javascript:;"><i class="material-icons text-sm me-2">edit</i>Edit</a>
+              <a class="btn btn-link text-danger text-gradient px-3 mb-0" href="javascript:;"><i
+                  class="material-icons text-sm me-2">delete</i>Delete</a>
+              <a class="btn btn-link text-dark px-3 mb-0" href="javascript:;"><i
+                  class="material-icons text-sm me-2">edit</i>Edit</a>
             </div>
           </li>
         </ul>
@@ -231,7 +259,9 @@
         <ul class="list-group">
           <li class="list-group-item border-0 d-flex justify-content-between ps-0 mb-2 border-radius-lg">
             <div class="d-flex align-items-center">
-              <button class="btn btn-icon-only btn-rounded btn-outline-danger mb-0 me-3 p-3 btn-sm d-flex align-items-center justify-content-center"><i class="material-icons text-lg">expand_more</i></button>
+              <button
+                class="btn btn-icon-only btn-rounded btn-outline-danger mb-0 me-3 p-3 btn-sm d-flex align-items-center justify-content-center"><i
+                  class="material-icons text-lg">expand_more</i></button>
               <div class="d-flex flex-column">
                 <h6 class="mb-1 text-dark text-sm">Netflix</h6>
                 <span class="text-xs">27 March 2020, at 12:30 PM</span>
@@ -243,7 +273,9 @@
           </li>
           <li class="list-group-item border-0 d-flex justify-content-between ps-0 mb-2 border-radius-lg">
             <div class="d-flex align-items-center">
-              <button class="btn btn-icon-only btn-rounded btn-outline-success mb-0 me-3 p-3 btn-sm d-flex align-items-center justify-content-center"><i class="material-icons text-lg">expand_less</i></button>
+              <button
+                class="btn btn-icon-only btn-rounded btn-outline-success mb-0 me-3 p-3 btn-sm d-flex align-items-center justify-content-center"><i
+                  class="material-icons text-lg">expand_less</i></button>
               <div class="d-flex flex-column">
                 <h6 class="mb-1 text-dark text-sm">Apple</h6>
                 <span class="text-xs">27 March 2020, at 04:30 AM</span>
@@ -258,7 +290,9 @@
         <ul class="list-group">
           <li class="list-group-item border-0 d-flex justify-content-between ps-0 mb-2 border-radius-lg">
             <div class="d-flex align-items-center">
-              <button class="btn btn-icon-only btn-rounded btn-outline-success mb-0 me-3 p-3 btn-sm d-flex align-items-center justify-content-center"><i class="material-icons text-lg">expand_less</i></button>
+              <button
+                class="btn btn-icon-only btn-rounded btn-outline-success mb-0 me-3 p-3 btn-sm d-flex align-items-center justify-content-center"><i
+                  class="material-icons text-lg">expand_less</i></button>
               <div class="d-flex flex-column">
                 <h6 class="mb-1 text-dark text-sm">Stripe</h6>
                 <span class="text-xs">26 March 2020, at 13:45 PM</span>
@@ -270,7 +304,9 @@
           </li>
           <li class="list-group-item border-0 d-flex justify-content-between ps-0 mb-2 border-radius-lg">
             <div class="d-flex align-items-center">
-              <button class="btn btn-icon-only btn-rounded btn-outline-success mb-0 me-3 p-3 btn-sm d-flex align-items-center justify-content-center"><i class="material-icons text-lg">expand_less</i></button>
+              <button
+                class="btn btn-icon-only btn-rounded btn-outline-success mb-0 me-3 p-3 btn-sm d-flex align-items-center justify-content-center"><i
+                  class="material-icons text-lg">expand_less</i></button>
               <div class="d-flex flex-column">
                 <h6 class="mb-1 text-dark text-sm">HubSpot</h6>
                 <span class="text-xs">26 March 2020, at 12:30 PM</span>
@@ -282,7 +318,9 @@
           </li>
           <li class="list-group-item border-0 d-flex justify-content-between ps-0 mb-2 border-radius-lg">
             <div class="d-flex align-items-center">
-              <button class="btn btn-icon-only btn-rounded btn-outline-success mb-0 me-3 p-3 btn-sm d-flex align-items-center justify-content-center"><i class="material-icons text-lg">expand_less</i></button>
+              <button
+                class="btn btn-icon-only btn-rounded btn-outline-success mb-0 me-3 p-3 btn-sm d-flex align-items-center justify-content-center"><i
+                  class="material-icons text-lg">expand_less</i></button>
               <div class="d-flex flex-column">
                 <h6 class="mb-1 text-dark text-sm">Creative Tim</h6>
                 <span class="text-xs">26 March 2020, at 08:30 AM</span>
@@ -294,7 +332,9 @@
           </li>
           <li class="list-group-item border-0 d-flex justify-content-between ps-0 mb-2 border-radius-lg">
             <div class="d-flex align-items-center">
-              <button class="btn btn-icon-only btn-rounded btn-outline-dark mb-0 me-3 p-3 btn-sm d-flex align-items-center justify-content-center"><i class="material-icons text-lg">priority_high</i></button>
+              <button
+                class="btn btn-icon-only btn-rounded btn-outline-dark mb-0 me-3 p-3 btn-sm d-flex align-items-center justify-content-center"><i
+                  class="material-icons text-lg">priority_high</i></button>
               <div class="d-flex flex-column">
                 <h6 class="mb-1 text-dark text-sm">Webflow</h6>
                 <span class="text-xs">26 March 2020, at 05:00 AM</span>
