--- a/src/app/layout/sidenav/sidenav.component.html
+++ b/src/app/layout/sidenav/sidenav.component.html
@@ -1,8 +1,11 @@
-<aside class="sidenav navbar navbar-vertical navbar-expand-xs border-0 border-radius-xl my-3 fixed-start ms-3   bg-gradient-dark" id="sidenav-main">
+<aside
+  class="sidenav navbar navbar-vertical navbar-expand-xs border-0 border-radius-xl my-3 fixed-start ms-3   bg-gradient-dark"
+  id="sidenav-main">
   <div class="sidenav-header">
-    <i class="fas fa-times p-3 cursor-pointer text-white opacity-5 position-absolute end-0 top-0 d-none d-xl-none" aria-hidden="true" id="iconSidenav"></i>
+    <i class="fas fa-times p-3 cursor-pointer text-white opacity-5 position-absolute end-0 top-0 d-none d-xl-none"
+      aria-hidden="true" id="iconSidenav"></i>
     <a class="navbar-brand m-0" href="" target="_blank">
-      <img src="./assets/img/logo-ct.png" class="navbar-brand-img h-100" alt="main_logo">
+      <img src="../../assets/img/logo-black.png" class="navbar-brand-img h-100" alt="main_logo">
       <span class="ms-1 font-weight-bold text-white">VoiceTech Dashboard</span>
     </a>
   </div>
@@ -14,7 +17,8 @@
           <div class="text-white text-center me-2 d-flex align-items-center justify-content-center">
             <i class="material-icons opacity-10">dashboard</i>
           </div>
-          <span class="nav-link-text ms-1">Dashboard <span class="text-white p-1 bg-gradient-primary shadow-primary border-radius-lg">New!</span></span>
+          <span class="nav-link-text ms-1">Dashboard <span
+              class="text-white p-1 bg-gradient-primary shadow-primary border-radius-lg">New!</span></span>
         </a>
       </li>
       <!-- <li class="nav-item">
@@ -30,8 +34,9 @@
           <div class="text-white text-center me-2 d-flex align-items-center justify-content-center">
             <i class="material-icons opacity-10">call</i>
           </div>
-          <span class="nav-link-text ms-1">Total Calls <span class="text-white p-1 bg-gradient-dark shadow-dark  border-radius-lg">{{allcalls?.length}}</span>
-        </span>
+          <span class="nav-link-text ms-1">Total Calls <span
+              class="text-white p-1 bg-gradient-dark shadow-dark  border-radius-lg">{{allcalls?.length}}</span>
+          </span>
         </a>
       </li>
 
@@ -40,7 +45,8 @@
           <div class="text-white text-center me-2 d-flex align-items-center justify-content-center">
             <i class="material-icons opacity-10">call_made</i>
           </div>
-          <span class="nav-link-text ms-1">Outgoing Calls <span class="text-white p-1 bg-gradient-warning shadow-primary border-radius-lg">{{allcalllogs?.length}}</span>
+          <span class="nav-link-text ms-1">Outgoing Calls <span
+              class="text-white p-1 bg-gradient-warning shadow-primary border-radius-lg">{{allcalllogs?.length}}</span>
 
           </span>
         </a>
@@ -51,7 +57,8 @@
           <div class="text-white text-center me-2 d-flex align-items-center justify-content-center">
             <i class="material-icons opacity-10">call_received</i>
           </div>
-          <span class="nav-link-text ms-1">Incoming Calls <span class="text-white p-1 bg-gradient-success shadow-primary border-radius-lg">{{allreceived?.length}}</span></span>
+          <span class="nav-link-text ms-1">Incoming Calls <span
+              class="text-white p-1 bg-gradient-success shadow-primary border-radius-lg">{{allreceived?.length}}</span></span>
         </a>
       </li>
 
@@ -60,7 +67,8 @@
           <div class="text-white text-center me-2 d-flex align-items-center justify-content-center">
             <i class="material-icons opacity-10">phone_missed</i>
           </div>
-          <span class="nav-link-text ms-1">Missed Calls <span class="text-white p-1 bg-gradient-info shadow-info border-radius-lg">{{allmissed?.length}}</span></span>
+          <span class="nav-link-text ms-1">Missed Calls <span
+              class="text-white p-1 bg-gradient-info shadow-info border-radius-lg">{{allmissed?.length}}</span></span>
         </a>
       </li>
 
@@ -92,21 +100,22 @@
       <li class="nav-item mt-3">
         <h6 class="ps-4 ms-2 text-uppercase text-xs text-white font-weight-bolder opacity-8">Account pages</h6>
       </li>
-      <li class="nav-item">
+      <!-- <li class="nav-item">
         <a class="nav-link text-white " routerLinkActive="active bg-gradient-primary" routerLink="/profile">
           <div class="text-white text-center me-2 d-flex align-items-center justify-content-center">
             <i class="material-icons opacity-10">person</i>
           </div>
           <span class="nav-link-text ms-1">Profile</span>
         </a>
-      </li>
+      </li> -->
 
       <li class="nav-item">
         <a class="nav-link text-white " routerLinkActive="active bg-gradient-primary" routerLink="/messages">
           <div class="text-white text-center me-2 d-flex align-items-center justify-content-center">
             <i class="material-icons opacity-10">email</i>
           </div>
-          <span class="nav-link-text ms-1">Support <span class="text-dark p-1 bg-gradient-light shadow-light border-radius-lg">{{unreadmsgs}}</span></span>
+          <span class="nav-link-text ms-1">Support <span
+              class="text-dark p-1 bg-gradient-light shadow-light border-radius-lg">{{unreadmsgs}}</span></span>
         </a>
       </li>
       <li class="nav-item">
