--- a/src/app/billing/billing.component.html
+++ b/src/app/billing/billing.component.html
@@ -1,7 +1,12 @@
 <div class="row">
   <div class="col-lg-8">
-    <div class="row">
-      <div class="col-xl-6 mb-xl-0 mb-4">
+    <div class="card p-3">
+
+      <div class="row">
+        <div class="col-6 d-flex align-items-center">
+          <h6 class="mb-0">Cart Items </h6>
+        </div>
+        <!-- <div class="col-xl-6 mb-xl-0 mb-4">
         <div class="card bg-transparent shadow-xl">
           <div class="overflow-hidden position-relative border-radius-xl">
             <img src="../../assets/img/illustrations/pattern-tree.svg"
@@ -29,78 +34,111 @@
             </div>
           </div>
         </div>
-      </div>
-      <div class="col-xl-6">
-        <div class="row">
-          <div class="col-md-6 col-6">
-            <div class="card">
-              <div class="card-header mx-4 p-3 text-center">
-                <div class="icon icon-shape icon-lg bg-gradient-primary shadow text-center border-radius-lg">
-                  <i class="material-icons opacity-10">account_balance</i>
+      </div> -->
+        <div class="col-xl-12">
+          <div class="row">
+            <div class="col-md-3 col-6">
+              <div class="card border card-plain border-radius-lg">
+                <div class="card-header mx-4 p-3 text-center">
+                  <div class="icon icon-shape icon-lg bg-gradient-primary shadow text-center border-radius-lg">
+                    <i class="material-icons opacity-10">call</i>
+                  </div>
                 </div>
-              </div>
-              <div class="card-body pt-0 p-3 text-center">
-                <h6 class="text-center mb-0">Salary</h6>
-                <span class="text-xs">Belong Interactive</span>
-                <hr class="horizontal dark my-3">
-                <h5 class="mb-0">+₹2000</h5>
+                <div class="card-body pt-0 p-3 text-center">
+                  <h6 class="text-center mb-0">SIP</h6>
+                  <span class="text-xs">Monthly Charge</span>
+                  <hr class="horizontal dark my-3">
+                  <h5 class="mb-0">₹300.00</h5>
+                </div>
               </div>
             </div>
-          </div>
-          <div class="col-md-6 col-6">
-            <div class="card">
-              <div class="card-header mx-4 p-3 text-center">
-                <div class="icon icon-shape icon-lg bg-gradient-primary shadow text-center border-radius-lg">
-                  <i class="material-icons opacity-10">account_balance_wallet</i>
+            <div class="col-md-3 col-6">
+              <div class="card border card-plain border-radius-lg">
+                <div class="card-header mx-4 p-3 text-center">
+                  <div class="icon icon-shape icon-lg bg-gradient-primary shadow text-center border-radius-lg">
+                    <i class="material-icons opacity-10">account_balance_wallet</i>
+                  </div>
+                </div>
+                <div class="card-body pt-0 p-3 text-center">
+                  <h6 class="text-center mb-0">Toll Free</h6>
+                  <span class="text-xs">Freelance Payment</span>
+                  <hr class="horizontal dark my-3">
+                  <h5 class="mb-0">₹455.00</h5>
                 </div>
               </div>
-              <div class="card-body pt-0 p-3 text-center">
-                <h6 class="text-center mb-0">Paypal</h6>
-                <span class="text-xs">Freelance Payment</span>
-                <hr class="horizontal dark my-3">
-                <h5 class="mb-0">₹455.00</h5>
+            </div>
+            <div class="col-md-3 col-6">
+              <div class="card border card-plain border-radius-lg">
+                <div class="card-header mx-4 p-3 text-center">
+                  <div class="icon icon-shape icon-lg bg-gradient-primary shadow text-center border-radius-lg">
+                    <i class="material-icons opacity-10">recording</i>
+                  </div>
+                </div>
+                <div class="card-body pt-0 p-3 text-center">
+                  <h6 class="text-center mb-0">Recording</h6>
+                  <span class="text-xs">Monthly Charge</span>
+                  <hr class="horizontal dark my-3">
+                  <h5 class="mb-0">₹200.00</h5>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-3 col-6">
+              <div class="card border card-plain border-radius-lg">
+                <div class="card-header mx-4 p-3 text-center">
+                  <div class="icon icon-shape icon-lg bg-gradient-primary shadow text-center border-radius-lg">
+                    <i class="material-icons opacity-10">key</i>
+                  </div>
+                </div>
+                <div class="card-body pt-0 p-3 text-center">
+                  <h6 class="text-center mb-0">SMS Service</h6>
+                  <span class="text-xs">Freelance Payment</span>
+                  <hr class="horizontal dark my-3">
+                  <h5 class="mb-0">₹455.00</h5>
+                </div>
               </div>
             </div>
           </div>
         </div>
-      </div>
-      <div class="col-md-12 mb-lg-0 mb-4">
-        <div class="card mt-4">
-          <div class="card-header pb-0 p-3">
-            <div class="row">
-              <div class="col-6 d-flex align-items-center">
-                <h6 class="mb-0">Payment Method</h6>
-              </div>
-              <div class="col-6 text-end">
-                <a class="btn bg-gradient-dark mb-0" href="javascript:;"><i
-                    class="material-icons text-sm">add</i>&nbsp;&nbsp;Add New Card</a>
-              </div>
-
-              <!-- id="pay-btn" -->
-
-              <a class="btn bg-gradient-dark mb-0" href="javascript:;" (click)="Payumoney()"><i
-                  class="material-icons text-sm">add</i>&nbsp;&nbsp;Pay Now</a>
-
-
-              <!-- <button type="button" (click)="SubmitBillingDetail()">PAY NOW</button> -->
-            </div>
-          </div>
-          <div class="card-body p-3">
-            <div class="row">
-              <div class="col-md-6 mb-md-0 mb-4">
-                <div class="card card-body border card-plain border-radius-lg d-flex align-items-center flex-row">
-                  <img class="w-10 me-3 mb-0" src="../../assets/img/logos/mastercard.png" alt="logo">
-                  <h6 class="mb-0">****&nbsp;&nbsp;&nbsp;****&nbsp;&nbsp;&nbsp;****&nbsp;&nbsp;&nbsp;7852</h6>
-                  <i class="material-icons ms-auto text-dark cursor-pointer" data-bs-toggle="tooltip"
-                    data-bs-placement="top" title="Edit Card">edit</i>
+        <div class="col-md-12 mb-lg-0 mb-4">
+          <div class="card border card-plain border-radius-lg mt-4">
+            <div class="card-header pb-0 p-3">
+              <div class="row">
+                <div class="col-6 d-flex align-items-center">
+                  <h6 class="mb-0">Payment Method</h6>
                 </div>
+                <div class="col-6 text-end">
+                  <a class="btn bg-gradient-dark mb-0" href="javascript:;"><i
+                      class="material-icons text-sm">add</i>&nbsp;&nbsp;Checkout</a>
+                </div>
+
+                <!-- id="pay-btn" -->
+
+                <!-- <a class="btn bg-gradient-dark mb-0" href="javascript:;" (click)="Payumoney()"><i
+                  class="material-icons text-sm">add</i>&nbsp;&nbsp;Pay Now</a> -->
+
+
+                <!-- <button type="button" (click)="SubmitBillingDetail()">PAY NOW</button> -->
               </div>
-              <div class="col-md-6">
-                <div class="card card-body border card-plain border-radius-lg d-flex align-items-center flex-row">
-                  <img class="w-10 me-3 mb-0" src="../../assets/img/logos/visa.png" alt="logo">
-                  <h6 class="mb-0">****&nbsp;&nbsp;&nbsp;****&nbsp;&nbsp;&nbsp;****&nbsp;&nbsp;&nbsp;5248</h6>
-                  <i class="material-icons ms-auto text-dark cursor-pointer" data-bs-toggle="tooltip"
-                    data-bs-placement="top" title="Edit Card">edit</i>
+            </div>
+            <div class="card-body p-3">
+              <div class="row">
+                <div class="col-md-6 mb-md-0 mb-4">
+                  <div class="card card-body card-plain  d-flex align-items-center flex-row">
+                    <h6>Sub-Total:&nbsp;&nbsp;₹2200.00 </h6>
+                    <!-- <img class="w-10 me-3 mb-0" src="../../assets/img/logos/mastercard.png" alt="logo">
+                    <h6 class="mb-0">****&nbsp;&nbsp;&nbsp;****&nbsp;&nbsp;&nbsp;****&nbsp;&nbsp;&nbsp;7852</h6> -->
+                    <!-- <i class="material-icons ms-auto text-dark cursor-pointer" data-bs-toggle="tooltip"
+                      data-bs-placement="top" title="Edit Card">edit</i> -->
+                  </div>
+                </div>
+                <div class="col-md-6">
+                  <div class="card card-body card-plain border-radius-lg d-flex align-items-center flex-row">
+                    <h6>Total:&nbsp;&nbsp;₹2200.00</h6>
+                    <!-- <img class="w-10 me-3 mb-0" src="../../assets/img/logos/visa.png" alt="logo">
+                    <h6 class="mb-0">****&nbsp;&nbsp;&nbsp;****&nbsp;&nbsp;&nbsp;****&nbsp;&nbsp;&nbsp;5248</h6> -->
+                    <!-- <i class="material-icons ms-auto text-dark cursor-pointer" data-bs-toggle="tooltip"
+                      data-bs-placement="top" title="Edit Card">edit</i> -->
+                  </div>
                 </div>
               </div>
             </div>
@@ -185,27 +223,14 @@
 </div>
 <div class="row">
   <div class="col-md-7 mt-4">
-    <div class="card">
+    <div class="card h-100">
       <div class="card-header pb-0 px-3">
         <h6 class="mb-0">Billing Information</h6>
       </div>
       <div class="card-body pt-4 p-3">
         <ul class="list-group">
-          <li class="list-group-item border-0 d-flex p-4 mb-2 bg-gray-100 border-radius-lg" *ngFor="let bill of bills">
+          <li class="list-group-item border card-plain border-radius-lg d-flex p-4 mb-2 " *ngFor="let bill of bills">
             <div class="d-flex flex-column">
-              <h6 class="mb-3 text-sm">Oliver Liam</h6>
-              <span class="mb-2 text-xs">Company Name: <span class="text-dark font-weight-bold ms-sm-2">Viking
-                  Burrito</span></span>
-              <span class="mb-2 text-xs">Email Address: <span
-                  class="text-dark ms-sm-2 font-weight-bold">oliver@burrito.com</span></span>
-              <span class="text-xs">VAT Number: <span
-                  class="text-dark ms-sm-2 font-weight-bold">FRB1235476</span></span>
-            </div>
-            <div class="ms-auto text-end">
-              <a class="btn btn-link text-danger text-gradient px-3 mb-0" href="javascript:;"><i
-                  class="material-icons text-sm me-2">delete</i>Delete</a>
-              <a class="btn btn-link text-dark px-3 mb-0" href="javascript:;"><i
-                  class="material-icons text-sm me-2">edit</i>Edit</a>
               <h6 class="mb-3 text-sm">{{bill?.durationdays}} Days | {{bill?.service}} service</h6>
               <span class="mb-2 text-xs">Service: <span
                   class="text-dark font-weight-bold ms-sm-2">{{bill?.service}}</span></span>
