--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,4 +1,3 @@
-
 <script src="./assets/js/plugins/chartjs.min.js"></script>
 <main class="main-content position-relative max-height-vh-150 h-150 border-radius-lg">
   <div class="container-fluid py-4">
@@ -6,7 +5,8 @@
       <div class="col-xl-3 col-sm-6 mb-xl-0 mb-4">
         <div class="card" style="cursor: pointer;" routerLink="/total-calls">
           <div class="card-header p-3 pt-2">
-            <div class="icon icon-lg icon-shape bg-gradient-dark shadow-dark text-center border-radius-xl mt-n4 position-absolute">
+            <div
+              class="icon icon-lg icon-shape bg-gradient-dark shadow-dark text-center border-radius-xl mt-n4 position-absolute">
               <i class="material-icons opacity-10">call</i>
             </div>
             <div class="text-end pt-1">
@@ -22,26 +22,28 @@
       </div>
       <div class="col-xl-3 col-sm-6 mb-xl-0 mb-4">
         <div class="card" style="cursor: pointer;" routerLink="/outgoing-calls">
-            <div class="card-header p-3 pt-2">
-              <div class="icon icon-lg icon-shape bg-gradient-warning shadow-warning text-center border-radius-xl mt-n4 position-absolute">
-                <i class="material-icons opacity-10">call_made
-                </i>
-              </div>
-              <div class="text-end pt-1">
-                <p class="text-sm mb-0 text-capitalize">Outgoing Calls</p>
-                <h4 class="mb-0">{{outgoingcalls || "0"}}</h4>
-              </div>
+          <div class="card-header p-3 pt-2">
+            <div
+              class="icon icon-lg icon-shape bg-gradient-warning shadow-warning text-center border-radius-xl mt-n4 position-absolute">
+              <i class="material-icons opacity-10">call_made
+              </i>
             </div>
-            <hr class="dark horizontal my-0">
-            <div class="card-footer p-3">
-              <p class="mb-0"><span class="text-success text-sm font-weight-bolder">+3% </span>than lask month</p>
+            <div class="text-end pt-1">
+              <p class="text-sm mb-0 text-capitalize">Outgoing Calls</p>
+              <h4 class="mb-0">{{outgoingcalls || "0"}}</h4>
             </div>
+          </div>
+          <hr class="dark horizontal my-0">
+          <div class="card-footer p-3">
+            <p class="mb-0"><span class="text-success text-sm font-weight-bolder">+3% </span>than lask month</p>
+          </div>
         </div>
       </div>
       <div class="col-xl-3 col-sm-6 mb-xl-0 mb-4">
         <div class="card" style="cursor: pointer;" routerLink="/incoming-calls">
           <div class="card-header p-3 pt-2">
-            <div class="icon icon-lg icon-shape bg-gradient-success shadow-success text-center border-radius-xl mt-n4 position-absolute">
+            <div
+              class="icon icon-lg icon-shape bg-gradient-success shadow-success text-center border-radius-xl mt-n4 position-absolute">
               <i class="material-icons opacity-10">call_received</i>
             </div>
             <div class="text-end pt-1">
@@ -58,11 +60,12 @@
       <div class="col-xl-3 col-sm-6">
         <div class="card" style="cursor: pointer;" routerLink="/missed-calls">
           <div class="card-header p-3 pt-2">
-            <div class="icon icon-lg icon-shape bg-gradient-info shadow-info text-center border-radius-xl mt-n4 position-absolute">
+            <div
+              class="icon icon-lg icon-shape bg-gradient-info shadow-info text-center border-radius-xl mt-n4 position-absolute">
               <i class="material-icons opacity-10">phone_missed</i>
             </div>
             <div class="text-end pt-1">
-              <p class="text-sm mb-0 text-capitalize">Calls Missed</p>
+              <p class="text-sm mb-0 text-capitalize">Missed Calls </p>
               <h4 class="mb-0">{{missedcalls || "0"}}</h4>
             </div>
           </div>
@@ -70,7 +73,7 @@
           <div class="card-footer p-3">
             <p class="mb-0"><span class="text-success text-sm font-weight-bolder">+5% </span>than yesterday</p>
           </div>
-          </div>
+        </div>
       </div>
     </div>
     <div class="row mt-4">
@@ -168,8 +171,10 @@
                   <tr>
                     <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7">Companies</th>
                     <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7 ps-2">Members</th>
-                    <th class="text-center text-uppercase text-secondary text-xxs font-weight-bolder opacity-7">Budget</th>
-                    <th class="text-center text-uppercase text-secondary text-xxs font-weight-bolder opacity-7">Completion</th>
+                    <th class="text-center text-uppercase text-secondary text-xxs font-weight-bolder opacity-7">Budget
+                    </th>
+                    <th class="text-center text-uppercase text-secondary text-xxs font-weight-bolder opacity-7">
+                      Completion</th>
                   </tr>
                 </thead>
                 <tbody>
@@ -186,16 +191,20 @@
                     </td>
                     <td>
                       <div class="avatar-group mt-2">
-                        <a href="javascript:;" class="avatar avatar-xs rounded-circle" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Ryan Tompson">
+                        <a href="javascript:;" class="avatar avatar-xs rounded-circle" data-bs-toggle="tooltip"
+                          data-bs-placement="bottom" title="Ryan Tompson">
                           <img src="./assets/img/team-1.jpg" alt="team1">
                         </a>
-                        <a href="javascript:;" class="avatar avatar-xs rounded-circle" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Romina Hadid">
+                        <a href="javascript:;" class="avatar avatar-xs rounded-circle" data-bs-toggle="tooltip"
+                          data-bs-placement="bottom" title="Romina Hadid">
                           <img src="./assets/img/team-2.jpg" alt="team2">
                         </a>
-                        <a href="javascript:;" class="avatar avatar-xs rounded-circle" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Alexander Smith">
+                        <a href="javascript:;" class="avatar avatar-xs rounded-circle" data-bs-toggle="tooltip"
+                          data-bs-placement="bottom" title="Alexander Smith">
                           <img src="./assets/img/team-3.jpg" alt="team3">
                         </a>
-                        <a href="javascript:;" class="avatar avatar-xs rounded-circle" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Jessica Doe">
+                        <a href="javascript:;" class="avatar avatar-xs rounded-circle" data-bs-toggle="tooltip"
+                          data-bs-placement="bottom" title="Jessica Doe">
                           <img src="./assets/img/team-4.jpg" alt="team4">
                         </a>
                       </div>
@@ -211,7 +220,8 @@
                           </div>
                         </div>
                         <div class="progress">
-                          <div class="progress-bar bg-gradient-info w-60" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"></div>
+                          <div class="progress-bar bg-gradient-info w-60" role="progressbar" aria-valuenow="60"
+                            aria-valuemin="0" aria-valuemax="100"></div>
                         </div>
                       </div>
                     </td>
@@ -220,7 +230,8 @@
                     <td>
                       <div class="d-flex px-2 py-1">
                         <div>
-                          <img src="./assets/img/small-logos/logo-atlassian.svg" class="avatar avatar-sm me-3" alt="atlassian">
+                          <img src="./assets/img/small-logos/logo-atlassian.svg" class="avatar avatar-sm me-3"
+                            alt="atlassian">
                         </div>
                         <div class="d-flex flex-column justify-content-center">
                           <h6 class="mb-0 text-sm">Add Progress Track</h6>
@@ -229,10 +240,12 @@
                     </td>
                     <td>
                       <div class="avatar-group mt-2">
-                        <a href="javascript:;" class="avatar avatar-xs rounded-circle" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Romina Hadid">
+                        <a href="javascript:;" class="avatar avatar-xs rounded-circle" data-bs-toggle="tooltip"
+                          data-bs-placement="bottom" title="Romina Hadid">
                           <img src="./assets/img/team-2.jpg" alt="team5">
                         </a>
-                        <a href="javascript:;" class="avatar avatar-xs rounded-circle" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Jessica Doe">
+                        <a href="javascript:;" class="avatar avatar-xs rounded-circle" data-bs-toggle="tooltip"
+                          data-bs-placement="bottom" title="Jessica Doe">
                           <img src="./assets/img/team-4.jpg" alt="team6">
                         </a>
                       </div>
@@ -248,7 +261,8 @@
                           </div>
                         </div>
                         <div class="progress">
-                          <div class="progress-bar bg-gradient-info w-10" role="progressbar" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100"></div>
+                          <div class="progress-bar bg-gradient-info w-10" role="progressbar" aria-valuenow="10"
+                            aria-valuemin="0" aria-valuemax="100"></div>
                         </div>
                       </div>
                     </td>
@@ -266,10 +280,12 @@
                     </td>
                     <td>
                       <div class="avatar-group mt-2">
-                        <a href="javascript:;" class="avatar avatar-xs rounded-circle" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Romina Hadid">
+                        <a href="javascript:;" class="avatar avatar-xs rounded-circle" data-bs-toggle="tooltip"
+                          data-bs-placement="bottom" title="Romina Hadid">
                           <img src="./assets/img/team-3.jpg" alt="team8">
                         </a>
-                        <a href="javascript:;" class="avatar avatar-xs rounded-circle" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Jessica Doe">
+                        <a href="javascript:;" class="avatar avatar-xs rounded-circle" data-bs-toggle="tooltip"
+                          data-bs-placement="bottom" title="Jessica Doe">
                           <img src="./assets/img/team-1.jpg" alt="team9">
                         </a>
                       </div>
@@ -285,7 +301,8 @@
                           </div>
                         </div>
                         <div class="progress">
-                          <div class="progress-bar bg-gradient-success w-100" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
+                          <div class="progress-bar bg-gradient-success w-100" role="progressbar" aria-valuenow="100"
+                            aria-valuemin="0" aria-valuemax="100"></div>
                         </div>
                       </div>
                     </td>
@@ -294,7 +311,8 @@
                     <td>
                       <div class="d-flex px-2 py-1">
                         <div>
-                          <img src="./assets/img/small-logos/logo-spotify.svg" class="avatar avatar-sm me-3" alt="spotify">
+                          <img src="./assets/img/small-logos/logo-spotify.svg" class="avatar avatar-sm me-3"
+                            alt="spotify">
                         </div>
                         <div class="d-flex flex-column justify-content-center">
                           <h6 class="mb-0 text-sm">Launch our Mobile App</h6>
@@ -303,16 +321,20 @@
                     </td>
                     <td>
                       <div class="avatar-group mt-2">
-                        <a href="javascript:;" class="avatar avatar-xs rounded-circle" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Ryan Tompson">
+                        <a href="javascript:;" class="avatar avatar-xs rounded-circle" data-bs-toggle="tooltip"
+                          data-bs-placement="bottom" title="Ryan Tompson">
                           <img src="./assets/img/team-4.jpg" alt="user1">
                         </a>
-                        <a href="javascript:;" class="avatar avatar-xs rounded-circle" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Romina Hadid">
+                        <a href="javascript:;" class="avatar avatar-xs rounded-circle" data-bs-toggle="tooltip"
+                          data-bs-placement="bottom" title="Romina Hadid">
                           <img src="./assets/img/team-3.jpg" alt="user2">
                         </a>
-                        <a href="javascript:;" class="avatar avatar-xs rounded-circle" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Alexander Smith">
+                        <a href="javascript:;" class="avatar avatar-xs rounded-circle" data-bs-toggle="tooltip"
+                          data-bs-placement="bottom" title="Alexander Smith">
                           <img src="./assets/img/team-4.jpg" alt="user3">
                         </a>
-                        <a href="javascript:;" class="avatar avatar-xs rounded-circle" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Jessica Doe">
+                        <a href="javascript:;" class="avatar avatar-xs rounded-circle" data-bs-toggle="tooltip"
+                          data-bs-placement="bottom" title="Jessica Doe">
                           <img src="./assets/img/team-1.jpg" alt="user4">
                         </a>
                       </div>
@@ -328,7 +350,8 @@
                           </div>
                         </div>
                         <div class="progress">
-                          <div class="progress-bar bg-gradient-success w-100" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
+                          <div class="progress-bar bg-gradient-success w-100" role="progressbar" aria-valuenow="100"
+                            aria-valuemin="0" aria-valuemax="100"></div>
                         </div>
                       </div>
                     </td>
@@ -346,7 +369,8 @@
                     </td>
                     <td>
                       <div class="avatar-group mt-2">
-                        <a href="javascript:;" class="avatar avatar-xs rounded-circle" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Ryan Tompson">
+                        <a href="javascript:;" class="avatar avatar-xs rounded-circle" data-bs-toggle="tooltip"
+                          data-bs-placement="bottom" title="Ryan Tompson">
                           <img src="./assets/img/team-4.jpg" alt="user5">
                         </a>
                       </div>
@@ -362,7 +386,8 @@
                           </div>
                         </div>
                         <div class="progress">
-                          <div class="progress-bar bg-gradient-info w-25" role="progressbar" aria-valuenow="25" aria-valuemin="0" aria-valuemax="25"></div>
+                          <div class="progress-bar bg-gradient-info w-25" role="progressbar" aria-valuenow="25"
+                            aria-valuemin="0" aria-valuemax="25"></div>
                         </div>
                       </div>
                     </td>
@@ -371,7 +396,8 @@
                     <td>
                       <div class="d-flex px-2 py-1">
                         <div>
-                          <img src="./assets/img/small-logos/logo-invision.svg" class="avatar avatar-sm me-3" alt="invision">
+                          <img src="./assets/img/small-logos/logo-invision.svg" class="avatar avatar-sm me-3"
+                            alt="invision">
                         </div>
                         <div class="d-flex flex-column justify-content-center">
                           <h6 class="mb-0 text-sm">Redesign New Online Shop</h6>
@@ -380,10 +406,12 @@
                     </td>
                     <td>
                       <div class="avatar-group mt-2">
-                        <a href="javascript:;" class="avatar avatar-xs rounded-circle" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Ryan Tompson">
+                        <a href="javascript:;" class="avatar avatar-xs rounded-circle" data-bs-toggle="tooltip"
+                          data-bs-placement="bottom" title="Ryan Tompson">
                           <img src="./assets/img/team-1.jpg" alt="user6">
                         </a>
-                        <a href="javascript:;" class="avatar avatar-xs rounded-circle" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Jessica Doe">
+                        <a href="javascript:;" class="avatar avatar-xs rounded-circle" data-bs-toggle="tooltip"
+                          data-bs-placement="bottom" title="Jessica Doe">
                           <img src="./assets/img/team-4.jpg" alt="user7">
                         </a>
                       </div>
@@ -399,7 +427,8 @@
                           </div>
                         </div>
                         <div class="progress">
-                          <div class="progress-bar bg-gradient-info w-40" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="40"></div>
+                          <div class="progress-bar bg-gradient-info w-40" role="progressbar" aria-valuenow="40"
+                            aria-valuemin="0" aria-valuemax="40"></div>
                         </div>
                       </div>
                     </td>
@@ -484,5 +513,5 @@
 
 
     <!-- footer -->
-   </div>
+  </div>
 </main>
