--- a/src/app/messages/messages.component.html
+++ b/src/app/messages/messages.component.html
@@ -1,193 +1,134 @@
-<div class="page-header min-height-300 border-radius-xl mt-4" style="background-image: url('https://images.unsplash.com/photo-1531512073830-ba890ca4eba2?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1920&q=80');">
-  <span class="mask  bg-gradient-primary  opacity-6"></span>
+<div class="page-header min-height-300 border-radius-xl mt-4"
+  style="background-image: url('https://images.unsplash.com/photo-1531512073830-ba890ca4eba2?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1920&q=80');">
+  <span class="mask  bg-gradient-primary  opacity-2"></span>
 </div>
 <div class="card card-body blur shadow-blur mx-3 mx-md-4 mt-n6">
-      <div class="row gx-4 mb-5">
-        <div class="col-auto">
-          <div class="avatar avatar-xl position-relative">
-            <img [src]="userDetails.userimg || defaultimage" alt="profile_image" class="w-100 border-radius-lg shadow-sm">
-          </div>
-        </div>
-        <div class="col-auto my-auto">
-          <div class="h-100">
-            <h5 class="mb-1">
-
-              {{userDetails.firstname}} {{userDetails.lastname}}
-            </h5>
-            <p class="mb-0 font-weight-normal text-sm">
-              CEO / Co-Founder
-            </p>
-          </div>
-        </div>
-        <div class="col-lg-4 col-md-6 my-sm-auto ms-sm-auto me-sm-0 mx-auto mt-3">
-          <div class="nav-wrapper position-relative end-0">
-            <ul class="nav nav-pills nav-fill p-1" role="tablist">
-              <li class="nav-item" routerLink="/profile" routerLinkActive="active bg-gradient-primary">
-                <a class="nav-link mb-0 px-0 py-1" data-bs-toggle="tab" href="javascript:;" role="tab" aria-selected="true">
-                  <i class="material-icons text-lg position-relative">home</i>
-                  <span class="ms-1">Profile</span>
-                </a>
-              </li>
-              <li class="nav-item" routerLink="/messages" routerLinkActive="active bg-gradient-primary" >
-                <a class="nav-link mb-0 px-0 py-1" data-bs-toggle="tab" href="javascript:;" role="tab" aria-selected="false">
-                  <i class="material-icons text-lg position-relative">email</i>
-                  <span class="ms-1">Support</span>
-                </a>
-              </li>
-              <li class="nav-item" routerLink="/setting" routerLinkActive="active bg-gradient-primary">
-                <a class="nav-link mb-0 px-0 py-1 " data-bs-toggle="tab" href="javascript:;" role="tab" aria-selected="false">
-                  <i class="material-icons text-lg position-relative">settings</i>
-                  <span class="ms-1">Settings</span>
-                </a>
-              </li>
-            </ul>
-          </div>
-        </div>
+  <div class="row gx-4 mb-5">
+    <div class="col-auto">
+      <div class="avatar avatar-xl position-relative">
+        <img [src]="userDetails.userimg || defaultimage" alt="profile_image" class="w-100 border-radius-lg shadow-sm">
       </div>
-      <div class="row flex-row">
-        <!-- <div class="col-lg-4">
-          <div class="card max-height-vh-70 overflow-auto overflow-x-hidden mb-5 mb-lg-0">
-            <form class="card-header">
-              <div class="input-group input-group-outline">
-                <label class="form-label">Search contact</label>
-                <input type="text" class="form-control">
+    </div>
+    <div class="col-auto my-auto">
+      <div class="h-100">
+        <h5 class="mb-1">
+
+          {{userDetails.firstname}} {{userDetails.lastname}}
+        </h5>
+        <p class="mb-0 font-weight-normal text-sm">
+          CEO / Co-Founder
+        </p>
+      </div>
+    </div>
+    <div class="col-lg-4 col-md-6 my-sm-auto ms-sm-auto me-sm-0 mx-auto mt-3">
+      <div class="nav-wrapper position-relative end-0">
+        <ul class="nav nav-pills nav-fill p-1" role="tablist">
+          <!-- <li class="nav-item" routerLink="/profile" routerLinkActive="active bg-gradient-primary">
+            <a class="nav-link mb-0 px-0 py-1" data-bs-toggle="tab" href="javascript:;" role="tab" aria-selected="true">
+              <i class="material-icons text-lg position-relative">home</i>
+              <span class="ms-1">Profile</span>
+            </a>
+          </li> -->
+          <li class="nav-item" routerLink="/messages" routerLinkActive="active bg-gradient-primary border-radius-lg">
+            <a class="nav-link mb-0 px-0 py-1" data-bs-toggle="tab" href="javascript:;" role="tab"
+              aria-selected="false">
+              <i class="material-icons text-lg position-relative">email</i>
+              <span class="ms-1">Support</span>
+            </a>
+          </li>
+          <li class="nav-item" routerLink="/setting" routerLinkActive="active bg-gradient-primary">
+            <a class="nav-link mb-0 px-0 py-1 " data-bs-toggle="tab" href="javascript:;" role="tab"
+              aria-selected="false">
+              <i class="material-icons text-lg position-relative">settings</i>
+              <span class="ms-1">Settings</span>
+            </a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </div>
+  <div class="row flex-row">
+
+    <div class="col-lg-12">
+      <div class="card blur shadow-blur max-height-vh-70">
+        <div class="card-header p-0 position-relative mt-n4  z-index-2 bg-transparent">
+          <div class="bg-gradient-primary shadow-primary border-radius-lg p-3">
+            <div class="row">
+              <div class="col-md-10">
+                <div class="d-flex align-items-center">
+                  <img alt="Image" src="../assets/img/team-2.jpg" class="avatar">
+                  <div class="ms-3">
+                    <h6 class="mb-0 d-block text-white">Support</h6>
+                    <span class="text-sm text-white opacity-8">VoiceTech/Support</span>
+                  </div>
+                </div>
               </div>
-            </form>
-            <div class="card-body p-2">
-              <a href="javascript:;" class="d-block p-2 border-radius-lg bg-gradient-primary">
-                <div class="d-flex p-2">
-                  <img alt="Image" src="../assets/img/team-2.jpg" class="avatar shadow">
-                  <div class="ms-3">
-                    <div class="justify-content-between align-items-center">
-                      <h6 class="text-white mb-0">Charlie Watson
-                        <span class="badge badge-success"></span>
-                      </h6>
-                      <p class="text-white mb-0 text-sm">Typing...</p>
-                    </div>
-                  </div>
+              <div class="col-1 my-auto">
+                <button class="btn btn-icon-only text-white mb-0 me-3 me-sm-0" type="button" data-bs-toggle="tooltip"
+                  data-bs-placement="top" title="" data-bs-original-title="Video call">
+                  <i class="material-icons">call</i>
+                </button>
+              </div>
+              <div class="col-1 my-auto">
+                <div class="dropdown">
+                  <button class="btn btn-icon-only text-white mb-0" type="button" data-bs-toggle="dropdown">
+                    <i class="material-icons">settings</i>
+                  </button>
+                  <ul class="dropdown-menu dropdown-menu-end me-sm-n2 p-2" aria-labelledby="chatmsg">
+                    <li>
+                      <a class="dropdown-item border-radius-md" href="javascript:;">
+                        Profile
+                      </a>
+                    </li>
+                    <li>
+                      <a class="dropdown-item border-radius-md" href="javascript:;">
+                        Mute conversation
+                      </a>
+                    </li>
+                    <li>
+                      <a class="dropdown-item border-radius-md" href="javascript:;">
+                        Block
+                      </a>
+                    </li>
+                    <li>
+                      <a class="dropdown-item border-radius-md" href="javascript:;">
+                        Clear chat
+                      </a>
+                    </li>
+                    <li>
+                      <hr class="dropdown-divider">
+                    </li>
+                    <li>
+                      <a class="dropdown-item border-radius-md text-danger" href="javascript:;">
+                        Delete chat
+                      </a>
+                    </li>
+                  </ul>
                 </div>
-              </a>
-              <a href="javascript:;" class="d-block p-2">
-                <div class="d-flex p-2">
-                  <img alt="Image" src="../assets/img/team-1.jpg" class="avatar shadow">
-                  <div class="ms-3">
-                    <h6 class="mb-0">Jane Doe</h6>
-                    <p class="text-muted text-xs mb-2">1 hour ago</p>
-                    <span class="text-muted text-sm col-11 p-0 text-truncate d-block">Computer users and programmers</span>
-                  </div>
-                </div>
-              </a>
-              <a href="javascript:;" class="d-block p-2">
-                <div class="d-flex p-2">
-                  <img alt="Image" src="../assets/img/team-3.jpg" class="avatar shadow">
-                  <div class="ms-3">
-                    <h6 class="mb-0">Mila Skylar</h6>
-                    <p class="text-muted text-xs mb-2">24 min ago</p>
-                    <span class="text-muted text-sm col-11 p-0 text-truncate d-block">You can subscribe to receive weekly...</span>
-                  </div>
-                </div>
-              </a>
-              <a href="javascript:;" class="d-block p-2">
-                <div class="d-flex p-2">
-                  <img alt="Image" src="../assets/img/team-5.jpg" class="avatar shadow">
-                  <div class="ms-3">
-                    <h6 class="mb-0">Sofia Scarlett</h6>
-                    <p class="text-muted text-xs mb-2">7 hours ago</p>
-                    <span class="text-muted text-sm col-11 p-0 text-truncate d-block">It’s an effective resource regardless..</span>
-                  </div>
-                </div>
-              </a>
-              <a href="javascript:;" class="d-block p-2">
-                <div class="d-flex p-2">
-                  <img alt="Image" src="../assets/img/team-4.jpg" class="avatar shadow">
-                  <div class="ms-3">
-                    <div class="justify-content-between align-items-center">
-                      <h6 class="mb-0">Tom Klein</h6>
-                      <p class="text-muted text-xs mb-2">1 day ago</p>
-                    </div>
-                    <span class="text-muted text-sm col-11 p-0 text-truncate d-block">Be sure to check it out if your dev pro...</span>
-                  </div>
-                </div>
-              </a>
+              </div>
             </div>
           </div>
-        </div> -->
-        <div class="col-lg-12">
-          <div class="card max-height-vh-70">
-            <div class="card-header p-0 position-relative mt-n4 mx-3 z-index-2 bg-transparent">
-              <div class="bg-gradient-primary shadow-primary border-radius-lg p-3">
-                <div class="row">
-                  <div class="col-md-10">
-                    <div class="d-flex align-items-center">
-                      <img alt="Image" src="../assets/img/team-2.jpg" class="avatar">
-                      <div class="ms-3">
-                        <h6 class="mb-0 d-block text-white">Support</h6>
-                        <span class="text-sm text-white opacity-8">VoiceTech/Support</span>
-                      </div>
-                    </div>
-                  </div>
-                  <div class="col-1 my-auto">
-                    <button class="btn btn-icon-only text-white mb-0 me-3 me-sm-0" type="button" data-bs-toggle="tooltip" data-bs-placement="top" title="" data-bs-original-title="Video call">
-                      <i class="material-icons">call</i>
-                    </button>
-                  </div>
-                  <div class="col-1 my-auto">
-                    <div class="dropdown">
-                      <button class="btn btn-icon-only text-white mb-0" type="button" data-bs-toggle="dropdown">
-                        <i class="material-icons">settings</i>
-                      </button>
-                      <ul class="dropdown-menu dropdown-menu-end me-sm-n2 p-2" aria-labelledby="chatmsg">
-                        <li>
-                          <a class="dropdown-item border-radius-md" href="javascript:;">
-                            Profile
-                          </a>
-                        </li>
-                        <li>
-                          <a class="dropdown-item border-radius-md" href="javascript:;">
-                            Mute conversation
-                          </a>
-                        </li>
-                        <li>
-                          <a class="dropdown-item border-radius-md" href="javascript:;">
-                            Block
-                          </a>
-                        </li>
-                        <li>
-                          <a class="dropdown-item border-radius-md" href="javascript:;">
-                            Clear chat
-                          </a>
-                        </li>
-                        <li>
-                          <hr class="dropdown-divider">
-                        </li>
-                        <li>
-                          <a class="dropdown-item border-radius-md text-danger" href="javascript:;">
-                            Delete chat
-                          </a>
-                        </li>
-                      </ul>
-                    </div>
+        </div>
+        <div class="card-body overflow-auto overflow-x-hidden" #scrollMe [scrollTop]="scrollMe.scrollHeight"
+          style="scroll-behavior: smooth;" style="width: 100%; background: #dfdfdf;">
+          <div class="row mb-4"
+            [ngClass]="message?.msgbysupport?'justify-content-start':'text-right justify-content-end'"
+            *ngFor="let message of messages">
+            <div class="col-auto">
+              <div class="card " [ngClass]="message?.msgbysupport?'':'bg-gradient-primary text-white'">
+                <div class="card-body p-2">
+                  <p class="mb-1">
+                    {{message?.msg}}
+                  </p>
+                  <div class="d-flex align-items-center text-sm opacity-6">
+                    <!-- <i class="material-icons text-sm me-1">schedule</i> -->
+                    <small>{{message?.createdAt|date:'medium'}}</small>
                   </div>
                 </div>
               </div>
             </div>
-            <div class="card-body overflow-auto overflow-x-hidden" #scrollMe [scrollTop]="scrollMe.scrollHeight" style="scroll-behavior: smooth;" style="width: 100%; background: #dfdfdf;">
-              <div class="row mb-4" [ngClass]="message?.msgbysupport?'justify-content-start':'text-right justify-content-end'" *ngFor="let message of messages">
-                <div class="col-auto">
-                  <div class="card " [ngClass]="message?.msgbysupport?'':'bg-gradient-primary text-white'">
-                    <div class="card-body p-2">
-                      <p class="mb-1">
-                        {{message?.msg}}
-                      </p>
-                      <div class="d-flex align-items-center text-sm opacity-6">
-                        <!-- <i class="material-icons text-sm me-1">schedule</i> -->
-                        <small>{{message?.createdAt|date:'medium'}}</small>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </div>
-              <!-- <div class="row justify-content-end text-right mb-4">
+          </div>
+          <!-- <div class="row justify-content-end text-right mb-4">
                 <div class="col-auto">
                   <div class="card bg-gradient-primary text-white">
                     <div class="card-body p-2">
@@ -309,21 +250,22 @@
                   </div>
                 </div>
               </div> -->
+        </div>
+        <div class="card-footer d-block">
+          <form [formGroup]="sendmsg" (submit)="submitchat()" class="align-items-center">
+            <div class="input-group input-group-outline d-flex">
+              <!-- <label class="form-label">Type your message</label> -->
+              <input type="text" class="form-control form-control-lg" placeholder="Type your message..."
+                formControlName="msg">
+              <button class="btn bg-gradient-primary mb-0">
+                <i class="material-icons">send</i>
+              </button>
             </div>
-            <div class="card-footer d-block">
-              <form [formGroup]="sendmsg" (submit)="submitchat()" class="align-items-center">
-                <div class="input-group input-group-outline d-flex">
-                  <!-- <label class="form-label">Type your message</label> -->
-                  <input type="text" class="form-control form-control-lg" placeholder="Type your message..." formControlName="msg">
-                  <button class="btn bg-gradient-primary mb-0">
-                    <i class="material-icons">send</i>
-                  </button>
-                </div>
-              </form>
-            </div>
-          </div>
+          </form>
         </div>
       </div>
+    </div>
+  </div>
 </div>
 <!-- <div class="card card-body mx-3 mx-md-4 mt-n6">
   <div class="row gx-4 mb-2">
