--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -1,5 +1,6 @@
-<div class="page-header min-height-300 border-radius-xl mt-4" style="background-image: url('https://images.unsplash.com/photo-1531512073830-ba890ca4eba2?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1920&q=80');">
-  <span class="mask  bg-gradient-primary  opacity-6"></span>
+<div class="page-header min-height-300 border-radius-xl mt-4"
+  style="background-image: url('https://images.unsplash.com/photo-1531512073830-ba890ca4eba2?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1920&q=80');">
+  <span class="mask  bg-gradient-primary  opacity-2"></span>
 </div>
 <div class="card card-body blur shadow-blur mx-3 mx-md-4 mt-n6">
   <div class="row gx-4 mb-2">
@@ -22,20 +23,23 @@
     <div class="col-lg-4 col-md-6 my-sm-auto ms-sm-auto me-sm-0 mx-auto mt-3">
       <div class="nav-wrapper position-relative end-0">
         <ul class="nav nav-pills nav-fill p-1" role="tablist">
-          <li class="nav-item" routerLink="/profile" routerLinkActive="active bg-gradient-primary">
-            <a class="nav-link mb-0 px-0 py-1 " data-bs-toggle="tab" href="javascript:;" role="tab" aria-selected="true">
+          <li class="nav-item" routerLink="/profile" routerLinkActive="active bg-gradient-primary border-radius-lg">
+            <a class="nav-link mb-0 px-0 py-1 " data-bs-toggle="tab" href="javascript:;" role="tab"
+              aria-selected="true">
               <i class="material-icons text-lg position-relative">home</i>
               <span class="ms-1">Profile</span>
             </a>
           </li>
-          <li class="nav-item" routerLink="/messages" routerLinkActive="active bg-gradient-primary" >
-            <a class="nav-link mb-0 px-0 py-1" data-bs-toggle="tab" href="javascript:;" role="tab" aria-selected="false">
+          <li class="nav-item" routerLink="/messages" routerLinkActive="active bg-gradient-primary ">
+            <a class="nav-link mb-0 px-0 py-1" data-bs-toggle="tab" href="javascript:;" role="tab"
+              aria-selected="false">
               <i class="material-icons text-lg position-relative">email</i>
               <span class="ms-1">Support</span>
             </a>
           </li>
           <li class="nav-item" routerLink="/setting" routerLinkActive="active bg-gradient-primary">
-            <a class="nav-link mb-0 px-0 py-1 " data-bs-toggle="tab" href="javascript:;" role="tab" aria-selected="false">
+            <a class="nav-link mb-0 px-0 py-1 " data-bs-toggle="tab" href="javascript:;" role="tab"
+              aria-selected="false">
               <i class="material-icons text-lg position-relative">settings</i>
               <span class="ms-1">Settings</span>
             </a>
@@ -57,19 +61,22 @@
               <li class="list-group-item border-0 px-0">
                 <div class="form-check form-switch ps-0">
                   <input class="form-check-input ms-auto" type="checkbox" id="flexSwitchCheckDefault" checked>
-                  <label class="form-check-label text-body ms-3 text-truncate w-80 mb-0" for="flexSwitchCheckDefault">Email me when someone follows me</label>
+                  <label class="form-check-label text-body ms-3 text-truncate w-80 mb-0"
+                    for="flexSwitchCheckDefault">Email me when someone follows me</label>
                 </div>
               </li>
               <li class="list-group-item border-0 px-0">
                 <div class="form-check form-switch ps-0">
                   <input class="form-check-input ms-auto" type="checkbox" id="flexSwitchCheckDefault1">
-                  <label class="form-check-label text-body ms-3 text-truncate w-80 mb-0" for="flexSwitchCheckDefault1">Email me when someone answers on my post</label>
+                  <label class="form-check-label text-body ms-3 text-truncate w-80 mb-0"
+                    for="flexSwitchCheckDefault1">Email me when someone answers on my post</label>
                 </div>
               </li>
               <li class="list-group-item border-0 px-0">
                 <div class="form-check form-switch ps-0">
                   <input class="form-check-input ms-auto" type="checkbox" id="flexSwitchCheckDefault2" checked>
-                  <label class="form-check-label text-body ms-3 text-truncate w-80 mb-0" for="flexSwitchCheckDefault2">Email me when someone mentions me</label>
+                  <label class="form-check-label text-body ms-3 text-truncate w-80 mb-0"
+                    for="flexSwitchCheckDefault2">Email me when someone mentions me</label>
                 </div>
               </li>
             </ul>
@@ -78,19 +85,22 @@
               <li class="list-group-item border-0 px-0">
                 <div class="form-check form-switch ps-0">
                   <input class="form-check-input ms-auto" type="checkbox" id="flexSwitchCheckDefault3">
-                  <label class="form-check-label text-body ms-3 text-truncate w-80 mb-0" for="flexSwitchCheckDefault3">New launches and projects</label>
+                  <label class="form-check-label text-body ms-3 text-truncate w-80 mb-0"
+                    for="flexSwitchCheckDefault3">New launches and projects</label>
                 </div>
               </li>
               <li class="list-group-item border-0 px-0">
                 <div class="form-check form-switch ps-0">
                   <input class="form-check-input ms-auto" type="checkbox" id="flexSwitchCheckDefault4" checked>
-                  <label class="form-check-label text-body ms-3 text-truncate w-80 mb-0" for="flexSwitchCheckDefault4">Monthly product updates</label>
+                  <label class="form-check-label text-body ms-3 text-truncate w-80 mb-0"
+                    for="flexSwitchCheckDefault4">Monthly product updates</label>
                 </div>
               </li>
               <li class="list-group-item border-0 px-0 pb-0">
                 <div class="form-check form-switch ps-0">
                   <input class="form-check-input ms-auto" type="checkbox" id="flexSwitchCheckDefault5">
-                  <label class="form-check-label text-body ms-3 text-truncate w-80 mb-0" for="flexSwitchCheckDefault5">Subscribe to newsletter</label>
+                  <label class="form-check-label text-body ms-3 text-truncate w-80 mb-0"
+                    for="flexSwitchCheckDefault5">Subscribe to newsletter</label>
                 </div>
               </li>
             </ul>
@@ -106,21 +116,27 @@
               </div>
               <div class="col-md-4 text-end">
                 <a href="javascript:;">
-                  <i class="fas fa-user-edit text-secondary text-sm" data-bs-toggle="tooltip" data-bs-placement="top" title="Edit Profile"></i>
+                  <i class="fas fa-user-edit text-secondary text-sm" data-bs-toggle="tooltip" data-bs-placement="top"
+                    title="Edit Profile"></i>
                 </a>
               </div>
             </div>
           </div>
           <div class="card-body p-3">
             <p class="text-sm">
-              Hi, I’m Alec Thompson, Decisions: If you can’t decide, the answer is no. If two equally difficult paths, choose the one more painful in the short term (pain avoidance is creating an illusion of equality).
+              Hi, I’m Alec Thompson, Decisions: If you can’t decide, the answer is no. If two equally difficult paths,
+              choose the one more painful in the short term (pain avoidance is creating an illusion of equality).
             </p>
             <hr class="horizontal gray-light my-4">
             <ul class="list-group">
-              <li class="list-group-item border-0 ps-0 pt-0 text-sm"><strong class="text-dark">Full Name:</strong> &nbsp; Alec M. Thompson</li>
-              <li class="list-group-item border-0 ps-0 text-sm"><strong class="text-dark">Mobile:</strong> &nbsp; (44) 123 1234 123</li>
-              <li class="list-group-item border-0 ps-0 text-sm"><strong class="text-dark">Email:</strong> &nbsp; alecthompson@mail.com</li>
-              <li class="list-group-item border-0 ps-0 text-sm"><strong class="text-dark">Location:</strong> &nbsp; USA</li>
+              <li class="list-group-item border-0 ps-0 pt-0 text-sm"><strong class="text-dark">Full Name:</strong>
+                &nbsp; Alec M. Thompson</li>
+              <li class="list-group-item border-0 ps-0 text-sm"><strong class="text-dark">Mobile:</strong> &nbsp; (44)
+                123 1234 123</li>
+              <li class="list-group-item border-0 ps-0 text-sm"><strong class="text-dark">Email:</strong> &nbsp;
+                alecthompson@mail.com</li>
+              <li class="list-group-item border-0 ps-0 text-sm"><strong class="text-dark">Location:</strong> &nbsp; USA
+              </li>
               <li class="list-group-item border-0 ps-0 pb-0">
                 <strong class="text-dark text-sm">Social:</strong> &nbsp;
                 <a class="btn btn-facebook btn-simple mb-0 ps-1 pe-2 py-0" href="javascript:;">
@@ -208,7 +224,8 @@
             <div class="card card-blog card-plain">
               <div class="card-header p-0 mt-n4 mx-3">
                 <a class="d-block shadow-xl border-radius-xl">
-                  <img src="../assets/img/home-decor-1.jpg" alt="img-blur-shadow" class="img-fluid shadow border-radius-xl">
+                  <img src="../assets/img/home-decor-1.jpg" alt="img-blur-shadow"
+                    class="img-fluid shadow border-radius-xl">
                 </a>
               </div>
               <div class="card-body p-3">
@@ -219,9 +236,12 @@
                   </h5>
                 </a>
                 <ul class="list-group">
-                  <li class="list-group-item p-0 border-0 ps-0 pt-0 text-sm"><strong class="text-dark">Price:</strong> &nbsp;  ₹{{plan?.planprice}}</li>
-                  <li class="list-group-item p-0 border-0 ps-0 text-sm"><strong class="text-dark">Talktime:</strong> &nbsp; {{plan?.minute_balance}} mins</li>
-                  <li class="list-group-item p-0 border-0 ps-0 text-sm"><strong class="text-dark">Validity:</strong> &nbsp; {{plan?.validityday}} Days</li>
+                  <li class="list-group-item p-0 border-0 ps-0 pt-0 text-sm"><strong class="text-dark">Price:</strong>
+                    &nbsp; ₹{{plan?.planprice}}</li>
+                  <li class="list-group-item p-0 border-0 ps-0 text-sm"><strong class="text-dark">Talktime:</strong>
+                    &nbsp; {{plan?.minute_balance}} mins</li>
+                  <li class="list-group-item p-0 border-0 ps-0 text-sm"><strong class="text-dark">Validity:</strong>
+                    &nbsp; {{plan?.validityday}} Days</li>
                 </ul>
                 <p class="mb-4 text-sm">
                   {{plan?.desc}}
