--- a/src/app/total-calls/total-calls.component.html
+++ b/src/app/total-calls/total-calls.component.html
@@ -155,6 +155,11 @@
                   <i class="material-icons opacity-10" style="color: var(--bs-info)">visibility
                   </i>
                 </a>
+                <audio #audioOption>
+                  <source
+                    src='http://103.8.43.14/onyxcxm/assets/recordings/2022-01-28/1145018583_2493_1927ff41-2c29-44e2-8e5e-dc611b1e4230.wav'
+                    type="wav">
+                </audio>
               </td>
             </tr>
             <!-- <tr>
