--- a/src/app/billing/billing.component.html
+++ b/src/app/billing/billing.component.html
@@ -68,10 +68,11 @@
               </div>
             </div>
             <div class="col-md-3 col-6">
+
               <div class="card border card-plain border-radius-lg">
                 <div class="card-header mx-4 p-3 text-center">
                   <div class="icon icon-shape icon-lg bg-gradient-primary shadow text-center border-radius-lg">
-                    <i class="material-icons opacity-10">recording</i>
+                    <i class="material-icons opacity-10">voicemail</i>
                   </div>
                 </div>
                 <div class="card-body pt-0 p-3 text-center">
