--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,6 +1,6 @@
 <script src="./assets/js/plugins/chartjs.min.js"></script>
 <main class="main-content position-relative max-height-vh-150 h-150 border-radius-lg">
-  <div class="container-fluid py-4">
+  <div class="py-2 px-1">
     <div class="row">
       <div class="col-xl-3 col-sm-6 mb-xl-0 mb-4">
         <div class="card" style="cursor: pointer;" routerLink="/total-calls">
