publish code to server

--- a/src/app/billing/billing.component.html
+++ b/src/app/billing/billing.component.html
@@ -4,7 +4,7 @@
 
       <div class="row">
         <div class="col-6 d-flex align-items-center">
-          <h6 class="mb-0">Cart Items </h6>
+          <h6 class="mb-2">Cart Items </h6>
         </div>
         <!-- <div class="col-xl-6 mb-xl-0 mb-4">
         <div class="card bg-transparent shadow-xl">
@@ -108,7 +108,7 @@
                   <h6 class="mb-0">Payment Method</h6>
                 </div>
                 <div class="col-6 text-end">
-                  <a class="btn bg-gradient-dark mb-0" href="javascript:;"><i
+                  <a class="btn bg-gradient-dark mb-0" routerLink="/payu"><i
                       class="material-icons text-sm">add</i>&nbsp;&nbsp;Checkout</a>
                 </div>
 
