--- a/src/app/layout/plugin/plugin.component.html
+++ b/src/app/layout/plugin/plugin.component.html
@@ -1,7 +1,7 @@
 <div class="fixed-plugin">
-  <a class="fixed-plugin-button text-dark position-fixed px-3 py-2">
+  <!-- <a class="fixed-plugin-button text-dark position-fixed px-3 py-2">
     <i class="material-icons py-2">settings</i>
-  </a>
+  </a> -->
   <div class="card shadow-lg">
     <div class="card-header pb-0 pt-3">
       <div class="float-start">
@@ -23,7 +23,8 @@
       </div>
       <a href="javascript:void(0)" class="switch-trigger background-color">
         <div class="badge-colors my-2 text-start">
-          <span class="badge filter bg-gradient-primary active" data-color="primary" onclick="sidebarColor(this)"></span>
+          <span class="badge filter bg-gradient-primary active" data-color="primary"
+            onclick="sidebarColor(this)"></span>
           <span class="badge filter bg-gradient-dark" data-color="dark" onclick="sidebarColor(this)"></span>
           <span class="badge filter bg-gradient-info" data-color="info" onclick="sidebarColor(this)"></span>
           <span class="badge filter bg-gradient-success" data-color="success" onclick="sidebarColor(this)"></span>
@@ -37,9 +38,12 @@
         <p class="text-sm">Choose between 2 different sidenav types.</p>
       </div>
       <div class="d-flex">
-        <button class="btn bg-gradient-dark px-3 mb-2 active" data-class="bg-gradient-dark" onclick="sidebarType(this)">Dark</button>
-        <button class="btn bg-gradient-dark px-3 mb-2 ms-2" data-class="bg-transparent" onclick="sidebarType(this)">Transparent</button>
-        <button class="btn bg-gradient-dark px-3 mb-2 ms-2" data-class="bg-white" onclick="sidebarType(this)">White</button>
+        <button class="btn bg-gradient-dark px-3 mb-2 active" data-class="bg-gradient-dark"
+          onclick="sidebarType(this)">Dark</button>
+        <button class="btn bg-gradient-dark px-3 mb-2 ms-2" data-class="bg-transparent"
+          onclick="sidebarType(this)">Transparent</button>
+        <button class="btn bg-gradient-dark px-3 mb-2 ms-2" data-class="bg-white"
+          onclick="sidebarType(this)">White</button>
       </div>
       <p class="text-sm d-xl-none d-block mt-2">You can change the sidenav type just on desktop view.</p>
       <!-- Navbar Fixed -->
@@ -59,12 +63,16 @@
       <hr class="horizontal dark my-sm-4">
       <a class="btn btn-outline-dark w-100" href="">View documentation</a>
       <div class="w-100 text-center">
-        <a class="github-button" href="https://github.com/creativetimofficial/material-dashboard" data-icon="octicon-star" data-size="large" data-show-count="true" aria-label="Star creativetimofficial/material-dashboard on GitHub">Star</a>
+        <a class="github-button" href="https://github.com/creativetimofficial/material-dashboard"
+          data-icon="octicon-star" data-size="large" data-show-count="true"
+          aria-label="Star creativetimofficial/material-dashboard on GitHub">Star</a>
         <h6 class="mt-3">Thank you for sharing!</h6>
-        <a href="https://twitter.com/intent/tweet?text=Check%20Material%20UI%20Dashboard%20made%20by%20%40CreativeTim%20%23webdesign%20%23dashboard%20%23bootstrap5&amp;url=https%3A%2F%2Fwww.creative-tim.com%2Fproduct%2Fsoft-ui-dashboard" class="btn btn-dark mb-0 me-2" target="_blank">
+        <a href="https://twitter.com/intent/tweet?text=Check%20Material%20UI%20Dashboard%20made%20by%20%40CreativeTim%20%23webdesign%20%23dashboard%20%23bootstrap5&amp;url=https%3A%2F%2Fwww.creative-tim.com%2Fproduct%2Fsoft-ui-dashboard"
+          class="btn btn-dark mb-0 me-2" target="_blank">
           <i class="fab fa-twitter me-1" aria-hidden="true"></i> Tweet
         </a>
-        <a href="https://www.facebook.com/sharer/sharer.php?u=https://www.creative-tim.com/product/material-dashboard" class="btn btn-dark mb-0 me-2" target="_blank">
+        <a href="https://www.facebook.com/sharer/sharer.php?u=https://www.creative-tim.com/product/material-dashboard"
+          class="btn btn-dark mb-0 me-2" target="_blank">
           <i class="fab fa-facebook-square me-1" aria-hidden="true"></i> Share
         </a>
       </div>
