--- a/src/app/plans/plans.component.html
+++ b/src/app/plans/plans.component.html
@@ -3,26 +3,14 @@
     <div class="nav-wrapper position-relative end-0">
       <ul class="nav nav-pills nav-fill p-1" role="tablist">
         <li class="nav-item">
-          <a
-            class="nav-link mb-0 px-0 py-1 active"
-            data-bs-toggle="tab"
-            href="#toll-free"
-            role="tab"
-            aria-controls="profile"
-            aria-selected="true"
-          >
+          <a class="nav-link mb-0 px-0 py-1 active" data-bs-toggle="tab" href="#toll-free" role="tab"
+            aria-controls="profile" aria-selected="true">
             Toll Free
           </a>
         </li>
         <li class="nav-item">
-          <a
-            class="nav-link mb-0 px-0 py-1"
-            data-bs-toggle="tab"
-            href="#prepaid"
-            role="tab"
-            aria-controls="dashboard"
-            aria-selected="false"
-          >
+          <a class="nav-link mb-0 px-0 py-1" data-bs-toggle="tab" href="#prepaid" role="tab" aria-controls="dashboard"
+            aria-selected="false">
             Prepaid
           </a>
         </li>
@@ -56,12 +44,7 @@
 </div>
 
 <div class="tab-content">
-  <div
-    class="tab-pane fade show active"
-    id="toll-free"
-    role="tabpanel"
-    aria-labelledby="home-tab"
-  >
+  <div class="tab-pane fade show active" id="toll-free" role="tabpanel" aria-labelledby="home-tab">
     <section class="pt-5">
       <div class="container">
         <div class="row justify-content-center">
@@ -75,7 +58,7 @@
               Compare Features
             </p>
           </div>
-          <div class="col-lg-11">
+          <div class="col-lg-11 card">
             <div class="table-responsive">
               <table class="table table-pricing">
                 <thead class="text-light">
@@ -83,11 +66,11 @@
                     <th class="ps-2">
                       <h6 class="mb-0">Price </h6>
                     </th>
-                    <th
-                      class="text-center"
-                      *ngFor="let plan of plans | slice: 0:5"
-                    >
-                      <h6 class="font-weight-bold">{{ plan?.plantitle }}</h6>
+                    <th class="text-center" *ngFor="let plan of plans | slice: 0:5; let i = index">
+                      <h6 *ngIf="i == 2" class="text-white p-1 bg-gradient-primary shadow-primary border-radius-lg">
+                        Recommended</h6>
+                      <h6 class="font-weight-bold">{{ plan?.plantitle }}
+                      </h6>
                       <h5 class="font-weight-bolder text-darker mb-0">
                         ₹ {{ plan?.planprice }}
                       </h5>
@@ -107,10 +90,7 @@
                     <td class="py-3">
                       <span class="text-xs">Incoming Balance</span>
                     </td>
-                    <td
-                      class="text-center py-3"
-                      *ngFor="let plan of plans | slice: 0:5"
-                    >
+                    <td class="text-center py-3" *ngFor="let plan of plans | slice: 0:5">
                       <!-- <i class="fas fa-check text-success text-xs"></i> -->
                       <p>{{ plan?.minute_balance }} mins</p>
                     </td>
@@ -125,10 +105,7 @@
                     <td class="py-3">
                       <span class="text-xs">Outgoing Balance</span>
                     </td>
-                    <td
-                      class="text-center py-3"
-                      *ngFor="let plan of plans | slice: 0:5"
-                    >
+                    <td class="text-center py-3" *ngFor="let plan of plans | slice: 0:5">
                       <!-- <i class="fas fa-check text-success text-xs"></i> -->
                       <p>{{ plan?.minute_balance }} mins</p>
                     </td>
@@ -143,10 +120,7 @@
                     <td class="py-3">
                       <span class="text-xs">Validity (day) </span>
                     </td>
-                    <td
-                      class="text-center py-3"
-                      *ngFor="let plan of plans | slice: 0:5"
-                    >
+                    <td class="text-center py-3" *ngFor="let plan of plans | slice: 0:5">
                       <!-- <i class="fas fa-check text-success text-xs"></i> -->
                       <p>{{ plan?.validityday }} days</p>
                     </td>
@@ -161,10 +135,7 @@
                     <td class="py-3">
                       <span class="text-xs">Description</span>
                     </td>
-                    <td
-                      class="text-center py-3"
-                      *ngFor="let plan of plans | slice: 0:5"
-                    >
+                    <td class="text-center py-3" *ngFor="let plan of plans | slice: 0:5">
                       <!-- <i class="fas fa-check text-success text-xs"></i> -->
                       <p>{{ plan?.desc }}</p>
                     </td>
@@ -244,31 +215,19 @@
                   <tr>
                     <th class="border-bottom-0"></th>
                     <th class="text-center align-items-center border-bottom-0">
-                      <a href="javascript:;" class="btn btn-dark mt-3"
-                        >Choose Plan</a
-                      >
+                      <a href="javascript:;" class="btn btn-dark mt-3">Choose Plan</a>
                     </th>
                     <th class="text-center align-items-center border-bottom-0">
-                      <a href="javascript:;" class="btn btn-dark mt-3"
-                        >Choose Plan</a
-                      >
+                      <a href="javascript:;" class="btn btn-dark mt-3">Choose Plan</a>
                     </th>
                     <th class="text-center align-items-center border-bottom-0">
-                      <a
-                        href="javascript:;"
-                        class="btn bg-gradient-primary mt-3"
-                        >Choose Plan</a
-                      >
+                      <a href="javascript:;" class="btn bg-gradient-primary mt-3">Choose Plan</a>
                     </th>
                     <th class="text-center align-items-center border-bottom-0">
-                      <a href="javascript:;" class="btn btn-dark mt-3"
-                        >Choose Plan</a
-                      >
+                      <a href="javascript:;" class="btn btn-dark mt-3">Choose Plan</a>
                     </th>
                     <th class="text-center align-items-center border-bottom-0">
-                      <a href="javascript:;" class="btn btn-dark mt-3"
-                        >Choose Plan</a
-                      >
+                      <a href="javascript:;" class="btn btn-dark mt-3">Choose Plan</a>
                     </th>
                   </tr>
                 </tbody>
@@ -279,12 +238,7 @@
       </div>
     </section>
   </div>
-  <div
-    class="tab-pane fade show"
-    id="prepaid"
-    role="tabpanel"
-    aria-labelledby="home-tab"
-  >
+  <div class="tab-pane fade show" id="prepaid" role="tabpanel" aria-labelledby="home-tab">
     <section class="pt-5">
       <div class="container">
         <div class="row justify-content-center">
@@ -298,7 +252,7 @@
               Compare Features
             </p>
           </div>
-          <div class="col-lg-11">
+          <div class="col-lg-11 card">
             <div class="table-responsive">
               <table class="table table-pricing">
                 <thead class="text-light">
@@ -306,10 +260,9 @@
                     <th class="ps-2">
                       <h6 class="mb-0">Space individual</h6>
                     </th>
-                    <th
-                      class="text-center"
-                      *ngFor="let plan of plans | slice: 0:5"
-                    >
+                    <th class="text-center" *ngFor="let plan of plans | slice: 0:5;let j = index">
+                      <h6 *ngIf="j == 2" class="text-white p-1 bg-gradient-primary shadow-primary border-radius-lg">
+                        Recommended</h6>
                       <h6 class="font-weight-bold">{{ plan?.plantitle }}</h6>
                       <h5 class="font-weight-bolder text-darker mb-0">
                         ₹ {{ plan?.planprice }}
@@ -330,10 +283,7 @@
                     <td class="py-3">
                       <span class="text-xs">Minute Balance</span>
                     </td>
-                    <td
-                      class="text-center py-3"
-                      *ngFor="let plan of plans | slice: 0:5"
-                    >
+                    <td class="text-center py-3" *ngFor="let plan of plans | slice: 0:5">
                       <!-- <i class="fas fa-check text-success text-xs"></i> -->
                       <p>{{ plan?.minute_balance }} mins</p>
                     </td>
@@ -348,10 +298,7 @@
                     <td class="py-3">
                       <span class="text-xs">Validity (day) </span>
                     </td>
-                    <td
-                      class="text-center py-3"
-                      *ngFor="let plan of plans | slice: 0:5"
-                    >
+                    <td class="text-center py-3" *ngFor="let plan of plans | slice: 0:5">
                       <!-- <i class="fas fa-check text-success text-xs"></i> -->
                       <p>{{ plan?.validityday }} days</p>
                     </td>
@@ -366,10 +313,7 @@
                     <td class="py-3">
                       <span class="text-xs">Description</span>
                     </td>
-                    <td
-                      class="text-center py-3"
-                      *ngFor="let plan of plans | slice: 0:5"
-                    >
+                    <td class="text-center py-3" *ngFor="let plan of plans | slice: 0:5">
                       <!-- <i class="fas fa-check text-success text-xs"></i> -->
                       <p>{{ plan?.desc }}</p>
                     </td>
@@ -449,31 +393,19 @@
                   <tr>
                     <th class="border-bottom-0"></th>
                     <th class="text-center align-items-center border-bottom-0">
-                      <a href="javascript:;" class="btn btn-dark mt-3"
-                        >Choose Plan</a
-                      >
+                      <a href="javascript:;" class="btn btn-dark mt-3">Choose Plan</a>
                     </th>
                     <th class="text-center align-items-center border-bottom-0">
-                      <a href="javascript:;" class="btn btn-dark mt-3"
-                        >Choose Plan</a
-                      >
+                      <a href="javascript:;" class="btn btn-dark mt-3">Choose Plan</a>
                     </th>
                     <th class="text-center align-items-center border-bottom-0">
-                      <a
-                        href="javascript:;"
-                        class="btn bg-gradient-primary mt-3"
-                        >Choose Plan</a
-                      >
+                      <a href="javascript:;" class="btn bg-gradient-primary mt-3">Choose Plan</a>
                     </th>
                     <th class="text-center align-items-center border-bottom-0">
-                      <a href="javascript:;" class="btn btn-dark mt-3"
-                        >Choose Plan</a
-                      >
+                      <a href="javascript:;" class="btn btn-dark mt-3">Choose Plan</a>
                     </th>
                     <th class="text-center align-items-center border-bottom-0">
-                      <a href="javascript:;" class="btn btn-dark mt-3"
-                        >Choose Plan</a
-                      >
+                      <a href="javascript:;" class="btn btn-dark mt-3">Choose Plan</a>
                     </th>
                   </tr>
                 </tbody>
