--- a/src/app/incoming-calls/incoming-calls.component.html
+++ b/src/app/incoming-calls/incoming-calls.component.html
@@ -48,7 +48,7 @@
 
 
     <div class="card-body px-0 pb-2">
-      <div class="table-responsive p-0">
+      <div class="table-responsive p-0 overflow-hidden">
         <table class="table align-items-center mb-0">
           <thead>
             <tr>
