--- a/src/app/layout/topnav/topnav.component.html
+++ b/src/app/layout/topnav/topnav.component.html
@@ -1,6 +1,6 @@
 <nav
-  class="navbar card border border-radius-lg navbar-main navbar-expand-lg px-0 my-2 mx-4 ms-2 shadow border-radius-xl"
-  id="navbarBlur" navbar-scroll="false" style="margin-left: 16.75rem !important;">
+  class="navbar card border border-radius-lg navbar-main navbar-expand-lg px-0 my-2 mx-4 ms-2 shadow border-0 border-radius-xl"
+  style="margin-left: 16.75rem !important;">
   <div class="container-fluid py-1 px-3">
     <div class="d-flex">
       <img style="background: white;
