--- a/src/app/outgoing-calls/outgoing-calls.component.html
+++ b/src/app/outgoing-calls/outgoing-calls.component.html
@@ -47,7 +47,7 @@
 
 
     <div class="card-body px-0 pb-2">
-      <div class="table-responsive p-0">
+      <div class="table-responsive p-0 overflow-hidden">
         <table class="table align-items-center mb-0">
           <thead>
             <tr>
@@ -163,11 +163,8 @@
             </tr>
           </tbody>
         </table>
-        <!-- <div class="row justify-space-between mx-auto mt-4" style="width: 50%;" >
-          <pagination-controls class="my-pagination" style="margin: auto;" (pageChange)="q = $event"></pagination-controls>
-        </div> -->
         <div class="row justify-content-center my-3">
-          <div class="col-12 p-0 text-center">
+          <div class="col-12 p-2 text-center">
             <pagination-controls class="my-pagination" (pageChange)="q = $event"></pagination-controls>
           </div>
         </div>
