--- a/src/app/settings/settings.component.html
+++ b/src/app/settings/settings.component.html
@@ -302,7 +302,7 @@
           <!-- <p class="text-sm">Architects design houses</p> -->
         </div>
         <div class="row">
-          <div class="col-xl-3 col-md-6 mb-xl-0 mb-4" *ngFor="let plan of Plans.slice(0,4)">
+          <div class="col-xl-3 col-md-6 mb-xl-0 mb-4" *ngFor="let plan of Plans?.slice(0,4)">
             <div class="card card-blog border border-radius-lg h-100">
               <!-- <div class="card-header p-0 mt-n4 mx-3">
                 <a class="d-block shadow-xl border-radius-xl">
