--- a/src/app/total-calls/total-calls.component.html
+++ b/src/app/total-calls/total-calls.component.html
@@ -47,7 +47,7 @@
       </div>
     </div>
     <div class="card-body px-0 pb-2">
-      <div class="table-responsive p-0">
+      <div class="table-responsive p-0 overflow-hidden">
         <table class="table align-items-center mb-0">
           <thead>
             <tr>
