--- a/src/app/billing/billing.component.html
+++ b/src/app/billing/billing.component.html
@@ -107,10 +107,7 @@
                 <div class="col-6 d-flex align-items-center">
                   <h6 class="mb-0">Payment Method</h6>
                 </div>
-                <div class="col-6 text-end">
-                  <a class="btn bg-gradient-dark mb-0" routerLink="/payu"><i
-                      class="material-icons text-sm">add</i>&nbsp;&nbsp;Checkout</a>
-                </div>
+
 
                 <!-- id="pay-btn" -->
 
@@ -140,6 +137,14 @@
                     <!-- <i class="material-icons ms-auto text-dark cursor-pointer" data-bs-toggle="tooltip"
                       data-bs-placement="top" title="Edit Card">edit</i> -->
                   </div>
+                </div>
+                <!-- <button type="submit" (click)="Payumoney();"
+                  class="btn bg-gradient-primary w-100 mb-0">Checkout</button> -->
+                <div class="col-12 text-center">
+                  <!-- <a class="btn bg-gradient-dark mb-0" (click)="Payumoney();"><i
+                      class="material-icons text-sm w-100">add</i>&nbsp;&nbsp;Checkout</a> -->
+                  <button type="submit" (click)="Payumoney();"
+                    class="btn bg-gradient-primary w-100 mb-0">Checkout</button>
                 </div>
               </div>
             </div>
