--- a/src/app/paymoney/paymoney.component.html
+++ b/src/app/paymoney/paymoney.component.html
@@ -2,25 +2,26 @@
   <h2>PayU Payment Form</h2>
   <form ngNoForm action="https://test.payu.in/_payment" name="payuform" method="POST" target="payment_popup"
     onsubmit="window.open('about:blank','payment_popup','width=900,height=500');">
-    <div class="form-group ">
+    <div class="form-group">
       <label for="productInfo">Product Name:</label>
-      <input type="text" class="form-control" id="productInfo" name="productinfo" [(ngModel)]="payuform.productinfo">
+      <input type="text" class="form-control border" id="productInfo" name="productinfo"
+        [(ngModel)]="payuform.productinfo">
     </div>
     <div class="form-group">
       <label for="firstname">Name:</label>
-      <input type="text" class="form-control" id="firstname" name="firstname" [(ngModel)]="payuform.firstname">
+      <input type="text" class="form-control border" id="firstname" name="firstname" [(ngModel)]="payuform.firstname">
     </div>
     <div class="form-group">
       <label for="email">Email:</label>
-      <input type="email" class="form-control" id="email" name="email" [(ngModel)]="payuform.email">
+      <input type="email" class="form-control border" id="email" name="email" [(ngModel)]="payuform.email">
     </div>
     <div class="form-group">
       <label for="email">Phone:</label>
-      <input type="number" class="form-control" id="phone" name="phone" [(ngModel)]="payuform.phone">
+      <input type="number" class="form-control border" id="phone" name="phone" [(ngModel)]="payuform.phone">
     </div>
     <div class="form-group">
       <label for="amount">Amount:</label>
-      <input type="number" class="form-control" id="amount" name="amount" [(ngModel)]="payuform.amount">
+      <input type="number" class="form-control border" id="amount" name="amount" [(ngModel)]="payuform.amount">
     </div>
     <textarea name="surl" id="surl" ng-model="surl" rows="2" cols="2" hidden [(ngModel)]="payuform.surl"></textarea>
     <textarea name="furl" id="furl" ng-model="furl" rows="2" cols="2" hidden [(ngModel)]="payuform.furl"></textarea>
