--- a/src/app/layout/topnav/topnav.component.html
+++ b/src/app/layout/topnav/topnav.component.html
@@ -14,7 +14,7 @@
       <div class="ms-md-auto pe-md-3 d-flex align-items-center">
         <h6 class="p-1 m-1" style="line-height: normal; text-align: center;">Plan Expiry: <br><span class="p-1 m-1 "
             style="    color: #3ea1ec;
-          ">{{"250days"}}</span>
+          ">{{Days}} Days</span>
         </h6>
         <div class="vl"></div>
         <h6 class="p-1 m-1" style="line-height: normal; text-align: center;">DST No: <br><span class=" p-1 m-1" style="    color: #3ea1ec;
