--- a/src/app/call-detail/call-detail.component.html
+++ b/src/app/call-detail/call-detail.component.html
@@ -101,9 +101,15 @@
                   </tr>
                 </tbody>
               </table>
+              <ngx-audio-player [playlist]="msaapPlaylist" [displayTitle]="msaapDisplayTitle" [autoPlay]="false"
+  muted="muted" [displayPlaylist]="msaapDisplayPlayList"  (trackEnded)="onEnded($event)"
+      [displayVolumeControls]="msaapDisplayVolumeControls" [displayRepeatControls]="msaapDisplayRepeatControls"
+      [disablePositionSlider]="msaapDisablePositionSlider" [displayArtist]="msaapDisplayArtist"
+      [displayDuration]="msaapDisplayDuration" [expanded]="true"></ngx-audio-player>
             </div>
           </div>
         </div>
       </div>
     </div>
   </section>
+
