--- a/src/app/sign-in/sign-in.component.html
+++ b/src/app/sign-in/sign-in.component.html
@@ -8,11 +8,14 @@
             <div class="bg-gradient-primary shadow-primary border-radius-lg py-3 pe-1">
               <div class="row" style="margin: auto;">
                 <div class="col-md-4">
+                <a href="http://voicetech.co.in/">
                 <img style="background: white;
                 border-radius: 0.5rem;
                 margin: 3px;
                 padding: 5px;
-                box-shadow: 0 4px 20px 0 rgb(0 0 0 / 14%), 0 7px 10px -5px rgb(233 30 99 / 40%) !important;" src="../../assets/img/logo-black.png" alt="" srcset="" width="100px" ></div>
+                box-shadow: 0 4px 20px 0 rgb(0 0 0 / 14%), 0 7px 10px -5px rgb(233 30 99 / 40%) !important;" src="../../assets/img/logo-black.png" alt="" srcset="" width="100px" >
+                </a>
+                </div>
                 <!-- <div class="col-md-6 text-white font-weight-bold" style="font-weight: 300;    margin-top: 20px;
                 margin-left: 13px;">VoiceTech</div> -->
                 <h3 class="col-md-8 text-white text-center" style="font-weight: 100; font-weight: 300; align-self: center;">Welcome Back!</h3>
