get plan id's and send data in billing

--- a/src/app/plans/plans.component.html
+++ b/src/app/plans/plans.component.html
@@ -571,10 +571,11 @@
                   </tr>
                   <tr>
                     <th class="border-bottom-0"></th>
-                    <th class="text-center align-items-center border-bottom-0">
-                      <a href="javascript:;" class="btn btn-dark mt-3">Choose Plan</a>
+                    <th class="text-center align-items-center border-bottom-0" *ngFor="let pospaidplan of pospaidplans | slice: 0:5">
+                      <a href="javascript:;" class="btn btn-dark mt-3" plan_id="pospaidplan?._id">Choose Plan</a>
                     </th>
-                    <th class="text-center align-items-center border-bottom-0">
+
+                    <!-- <th class="text-center align-items-center border-bottom-0">
                       <a href="javascript:;" class="btn btn-dark mt-3">Choose Plan</a>
                     </th>
                     <th class="text-center align-items-center border-bottom-0">
@@ -585,7 +586,7 @@
                     </th>
                     <th class="text-center align-items-center border-bottom-0">
                       <a href="javascript:;" class="btn btn-dark mt-3">Choose Plan</a>
-                    </th>
+                    </th> -->
                   </tr>
                 </tbody>
               </table>
